--- a/1第一阶段/1-04【集合】.md
+++ b/1第一阶段/1-04【集合】.md
@@ -92,7 +92,7 @@ for(元素的数据类型  变量 : Collection集合or数组){
 
 它用于遍历Collection和数组。通常只进行遍历元素，不要在遍历的过程中对集合元素进行增删操作。
 
-# 第二章 List集合
+# 第二章 List接口
 
 `java.util.List`接口继承自`Collection`接口，是单列集合的一个重要分支，习惯性地会将实现了`List`接口的对象称为List集合。在List集合中允许出现重复的元素，所有的元素是以一种线性方式进行存储的，在程序中可以通过索引来访问集合中的指定元素。另外，List集合还有一个特点就是元素有序，即元素的存入顺序和取出顺序一致。
 
