--- a/1第一阶段/1-05【异常、单元测试】.md
+++ b/1第一阶段/1-05【异常、单元测试】.md
@@ -10,13 +10,15 @@
 
 ## 1.1 异常体系
 
-异常机制其实就是帮助我们**找到**程序中的问题，异常的根类是`java.lang.Throwable` ，其下有两个子类：`java.lang.Error`与`java.lang.Exception`，平常所说的异常指`java.lang.Exception`。 
+异常机制其实就是帮助我们找到程序中的问题，异常的根类是`java.lang.Throwable` ，其下有两个子类：`java.lang.Error`与`java.lang.Exception`，平常所说的异常指`java.lang.Exception`。 
 
 <!-- throw 投; 掷; 抛; 扔; 摔; 丢; 猛推; 使劲撞; able 能够的; 能; 能够；--> 
 
 <!-- exception 例外 -->
 
 <!-- expect 预料 期待 期望-->
+
+![](D:\Java\笔记\图片\1-05【异常】\1异常分类.png)
 
 **Throwable体系：**
 
@@ -41,12 +43,12 @@
 
 我们平常说的异常就是指Exception，因为这类异常一旦出现，我们就要对代码进行更正，修复程序。
 
+![](D:\Java\笔记\图片\1-05【异常】\1异常分类.png)
+
 **异常(Exception)的分类**：
 
-* **运行时期异常**：runtime异常。在运行时期，检查异常。运行异常类对应于编译错误，它是指Java程序在运行时产生的由解释器引发的各种异常。
-  运行异常可能出现在任何地方，且出现频率很高，因此为了避免巨大的系统资源开销，编译器不对异常进行检查。所以Java语言中的运行异常不一定被捕获。出现运行错误往往表示代码有错误，如：算数异常（如被0除）、下标异常（如数组越界）等。
-* **非运行时异常**：非运行异常时Non_RuntimeException类及其子类的实例，又称为可检测异常。
-  Java编译器利用分析方法或构造方法中可能产生的结果来检测Java程序中是否含有检测异常的处理程序，对于每个可能的可检测异常，方法或构造方法的throws子句必须列出该异常对应的类。在Java的标准包java.lang java.util 和Java net中定义的异常都是非运行异常。
+* **运行时期异常**：runtime异常，又称为非受检查异常。不受检查！不受检查！！不受检查！！！因为不受检查，所以在代码中可能会有RunTimeException时Java编译检查时不会告诉你有这个异常，但是在实际运行代码时则会暴露出来，比如经典的1/0，空指针等。如果不处理也会被Java自己处理。
+* **非运行时异常**：非运行异常时Non_RuntimeException类及其子类的实例，又称为可检测异常，受检查异常，编译期异常。Java编译器利用分析方法或构造方法中可能产生的结果来检测Java程序中是否含有检测异常的处理程序，对于每个可能的可检测异常，方法或构造方法的throws子句必须列出该异常对应的类。在Java的标准包java.lang java.util 和Java net中定义的异常都是非运行异常。IOException、classNotFund
 
 **代码如下：**
 
@@ -228,9 +230,7 @@ Java异常处理的五个关键字：try、catch、finally、throw、throws
 
    throw用在方法内，用来抛出一个异常对象，将这个异常对象传递到调用者处，并结束当前方法的执行。
 
-## 2.2 Objects非空判断
-
-学习过一个类Objects，它由一些静态的实用方法组成，这些方法是null-save（空指针安全的）或者null-tolerant（容忍空指针的），那么在它的源码中，对对象为null的值进行了抛出异常操作。
+之前学习过一个类Objects，它由一些静态的实用方法组成，这些方法是null-save（空指针安全的）或者null-tolerant（容忍空指针的），那么在它的源码中，对对象为null的值进行了抛出异常操作。
 
 * `public static <T> T requireNonNull(T obj)`:查看指定引用对象不是null。
 
@@ -258,11 +258,9 @@ public class Demo04Objects {
 
 ## 2.3 声明异常throws
 
-**声明异常**：将问题标识出来，报告给调用者，如果方法内通过throw抛出了编译时异常，而没有捕获处理（稍后讲解该方式），那么必须通过throws进行声明，让调用者去处理。
+**声明异常**：将问题标识出来，报告给调用者，如果方法内通过throw抛出了编译时异常，而没有捕获处理，那么必须通过throws进行声明，让调用者去处理。
 
-关键字throws运用于方法声明之上，用于表示当前方法不处理异常，而是提醒该方法的调用者来处理异常（抛出异常）。
-
-异常声明格式：`修饰符 返回值类型 方法名(参数) throws 异常类名1，异常类名2...{    }`
+关键字throws运用于方法声明之上，用于表示当前方法不处理异常，而是提醒该方法的调用者来处理异常（抛出异常）。异常声明格式：`修饰符 返回值类型 方法名(参数) throws 异常类名1，异常类名2...{    }`
 
 throws关键字：异常处理的第一种方式，交给别人来处理
 
@@ -271,40 +269,25 @@ throws关键字：异常处理的第一种方式，交给别人来处理
 * 当方法内部抛出异常对象的时候，那么我们就必须处理这个异常对象
 * 可以使用throws关键字处理异常对象，会把异常对象声明抛出给方法的调用者处理（自己不处理，给别人处理），最终转交给JVM处理-->中断处理
 
-**注意**：
+注意：
 
 * throws关键字必须写在方法声明处
 
 * throws关键字后边声明的异常必须是Exception或者是Exception的子类
 
-* 方法内部如果跑出了多个异常对象，那么throws后边必须也声明多个异常
+* 方法内部如果跑出了多个异常对象，那么throws后边必须也声明多个异常。如果抛出的多个异常对象有子父类关系，那么直接声明父类异常即可
 
-  如果抛出的多个异常对象有子父类关系，那么直接声明父类异常即可
+* 调用一个声明抛出异常的方法，我们就必须处理声明的异常，要么继续使用throws声明抛出，交给方法的调用者处理，最终给JVM；要么try...catch自己处理异常。
 
-* 调用一个声明抛出异常的方法，我们就必须处理声明的异常
-
-  要么继续使用throws声明抛出，交给方法的调用者处理，最终给JVM
-
-  要么try...catch自己处理异常
 
 ```java
-import java.io.FileNotFoundException;
-import java.io.IOException;
-
 public class Demo05Throws {
 
-    // IOException是FileNotFoundException父类，所以只需抛出IOException
     public static void main(String[] args) throws IOException {
         readFile("c:\\a.txt");
     }
 
-    /*
-        定义一个方法，对传递的文件路径进行合法性判断
-        如果路径不是“c:\a.txt”，那么我们就抛出文件找不到异常对象，告知方法的调用者
-        注意：
-            FileNotFoundException是编译异常，抛出了编译异常，就必须处理这个异常
-            可以使用throws继续声明抛出FileNotFoundException这个异常对象，让方法的调用者处理
-     */
+    // FileNotFoundException是编译异常，抛出了编译异常，就必须处理这个异常
     // IOException是FileNotFoundException父类，所以只需抛出IOException
     public static void readFile(String fileName) throws IOException {
         if (!fileName.equals("c:\\a.txt")) {
@@ -316,27 +299,20 @@ public class Demo05Throws {
         }
 
         System.out.println("路径没有问题，读取文件");
-
     }
 }
 ```
 
 ## 2.4 捕获异常try...catch
 
-<!--P294-->
-
-如果使用异常出现的话，会立刻终止程序，所以我们得处理异常：
+如果异常出现的话，会立刻终止程序，所以我们得处理异常：
 
 1. 该方法不处理，而是声明抛出，由该方法的调用者来处理(throws)。
 2. 在方法中使用try-catch的语句块来处理异常。
 
-**try-catch**的方式就是捕获异常。
+**try-catch**的方式就是捕获异常。**捕获异常**：java中对异常有针对性的语句进行捕获，可以对出现的异常进行指定方式的处理。
 
-* **捕获异常**：java中对异常有针对性的语句进行捕获，可以对出现的异常进行指定方式的处理。
-
-捕获异常语法如下：
-
-try...catch：异常处理的第二种方式，自己处理异常
+捕获异常语法如下：`try...catch`
 
 ```java
 /*
@@ -362,25 +338,20 @@ try...catch：异常处理的第二种方式，自己处理异常
    如果try中没有产生异常，那么就不会执行catch中异常的处理逻辑，执行完try中的代码，继续执行try...catch之后的代码
 
 ```java
-import java.io.IOException;
-
 public class Demo01TryCatch {
     public static void main(String[] args) {
         try {
             // 可能产生异常的代码
             // d:\\a.txt和d:\\a.tx的结果是不一样的
             readFile("d:\\a.txt");
-        } catch (IOException e) {// try中抛出什么异常对象，catch就定义什么异常变量，用来接收这个异常对象
+        } catch (IOException e) {
+            // try中抛出什么异常对象，catch就定义什么异常变量，用来接收这个异常对象
             // 异常的处理逻辑，异常对象之后，怎么处理异常对象
             System.out.println("传递的文件不是.txt");
         }
         System.out.println("后续代码");
     }
 
-    /*
-        如果传递的路径，不是.txt结尾
-        那么我们就抛出IO异常对象，告知方法的调用者，文件的后缀名不对
-     */
     public static void readFile(String fileName) throws IOException {
         if (!fileName.endsWith(".txt")) {
             throw new IOException("文件名的后缀不对");
@@ -390,42 +361,27 @@ public class Demo01TryCatch {
 }
 ```
 
-<!--P295-->
-
-如何获取异常信息：
-
-Throwable类中定义了一些查看方法：
+如何获取异常信息，Throwable类中定义了一些查看方法：
 
 * `public String getMessage`():获取异常的描述信息，原因（提示给用户的时候，就提示错误原因）。
 
-* `public String toString`():获取异常的类型和异常描述信息（不用）。
+* `public String toString`():获取异常的类型和异常描述信息。
 
 * `public void printStackTrace`():打印异常的跟踪栈信息并输出到控制台。
 
-  *包含了异常的类型，异常的原因，还包括异常出现的位置，在开发和调试的阶段，都得使用printStackTrace。*
+  包含了异常的类型，异常的原因，还包括异常出现的位置，在开发和调试的阶段，都得使用printStackTrace。
 
 ```java
-import java.io.IOException;
-
 public class Demo01TryCatch {
     public static void main(String[] args) {
         try {
             // 可能产生异常的代码
             // d:\\a.txt和d:\\a.tx的结果是不一样的
             readFile("d:\\a.tx");
-        } catch (IOException e) {// try中抛出什么异常对象，catch就定义什么异常变量，用来接收这个异常对象
-            // 异常的处理逻辑，异常对象之后，怎么处理异常对象
-            // System.out.println("传递的文件不是.txt");
-
-            /*
-                Throwable类中定义了3个异常处理的方法
-                String getMessage() 返回此throwable的简短描述
-                String toString() 返回此throwable的详细消息字符串
-                void printStackTrace() JVM打印异常对象，默认此方法，打印的异常信息是最全面的
-             */
-            // System.out.println(e.getMessage());// 文件名的后缀不对
-            // System.out.println(e.toString()); // 重写Object类的toString方法  java.io.IOException: 文件名的后缀不对
-            // System.out.println(e);// java.io.IOException: 文件名的后缀不对
+        } catch (IOException e) {
+            System.out.println(e.getMessage()); // 文件名的后缀不对
+            System.out.println(e.toString()); // 重写Object类的toString方法  java.io.IOException: 文件名的后缀不对
+            System.out.println(e); // java.io.IOException: 文件名的后缀不对
 
             /*
                 java.io.IOException: 文件名的后缀不对
@@ -438,10 +394,6 @@ public class Demo01TryCatch {
         System.out.println("后续代码");
     }
 
-    /*
-        如果传递的路径，不是.txt结尾
-        那么我们就抛出IO异常对象，告知方法的调用者，文件的后缀名不对
-     */
     public static void readFile(String fileName) throws IOException {
         if (!fileName.endsWith(".txt")) {
             throw new IOException("文件名的后缀不对");
@@ -461,21 +413,11 @@ public class Demo01TryCatch {
 
 ## 2.4 finally代码块
 
-<!--P296 12.22-->
-
 **finally**：有一些特定的代码无论异常是否发生，都需要执行。另外，因为异常会引发程序跳转，导致有些语句执行不到。而finally就是解决这个问题的，在finally代码块中存放的代码都是一定会被执行的。
 
-什么时候的代码必须最终执行？
+当我们在try语句块中打开了一些物理资源(磁盘文件/网络连接/数据库连接等)，我们都得在使用完之后，最终关闭打开的资源。比如在我们之后学习的IO流中，当打开了一个关联文件的资源，最后程序不管结果如何，都需要把这个资源关闭掉。
 
-当我们在try语句块中打开了一些物理资源(磁盘文件/网络连接/数据库连接等)，我们都得在使用完之后，最终关闭打开的资源。
-
-finally的语法：
-
-try...catch...finally:自身需要处理异常，最终还得关闭资源。
-
-> 注意：finally不能单独使用。
-
-比如在我们之后学习的IO流中，当打开了一个关联文件的资源，最后程序不管结果如何，都需要把这个资源关闭掉。
+finally的语法：`try...catch...finally`。finally不能单独使用。
 
 finally代码参考如下：
 
@@ -500,8 +442,6 @@ finally代码参考如下：
 ```
 
 ```java
-import java.io.IOException;
-
 public class Demo02TryCatchFinally {
 
     public static void main(String[] args) {
@@ -523,118 +463,253 @@ public class Demo02TryCatchFinally {
 }
 ```
 
+### 2.4.1 finally中的return
+
+```java
+public class Demo3 {
+	public static void main(String[] args) {
+		int i = Demo3.test();
+        //结果为20
+		System.out.println(i);
+	}
+
+	public static int test() {
+		int i;
+		try {
+			i = 10;
+			return i;
+		} finally {
+			i = 20;
+			return i;
+		}
+	}
+}
+```
+
+```java
+Code:
+     stack=1, locals=3, args_size=0
+        0: bipush        10
+        2: istore_0
+        3: iload_0
+        4: istore_1 				 //暂存返回值
+        5: bipush        20
+        7: istore_0
+        8: iload_0
+        9: ireturn					//ireturn会返回操作数栈顶的整型值20
+       10: astore_2					//如果出现异常，还是会执行finally块中的内容，没有抛出异常
+       11: bipush        20
+       13: istore_0
+       14: iload_0
+       15: ireturn					//这里没有athrow了
+     Exception table:
+        from    to  target type
+            0     5    10   anyCopy
+```
+
+- 由于 ﬁnally 中的 ireturn 被插入了所有可能的流程，因此返回结果肯定以ﬁnally的为准
+- 至于字节码中第 2 行，似乎没啥用，且留个伏笔，看下个例子
+- 跟上例中的 ﬁnally 相比，发现没有 athrow 了，这告诉我们：如果在 ﬁnally 中出现了 return，会吞掉异常
+- 所以不要在finally中进行返回操作
+
+例如下面的操作会吞掉异常：
+
+```java
+public class Demo3 {
+   public static void main(String[] args) {
+      int i = Demo3.test();
+      //最终结果为20
+      System.out.println(i);
+   }
+
+   public static int test() {
+      int i;
+      try {
+         i = 10;
+         i = i/0;			//这里应该会抛出异常 但是并没有
+         return i;
+      } finally {
+         i = 20;
+         return i;
+      }
+   }
+}
+```
+
+会发现打印结果为20，并未抛出异常
+
+### 2.4.2 finally不带return
+
+```java
+public class Demo4 {
+	public static void main(String[] args) {
+		int i = Demo4.test();
+		System.out.println(i);	// i = 10
+	}
+
+	public static int test() {
+		int i = 10;
+		try {
+			return i;
+		} finally {
+			i = 20;
+		}
+	}
+}
+```
+
+```java
+Code:
+     stack=1, locals=3, args_size=0
+        0: bipush        10
+        2: istore_0 						// 赋值给i 10
+        3: iload_0							// 加载到操作数栈顶
+        4: istore_1 						// 加载到局部变量表的1号位置
+        5: bipush        20
+        7: istore_0 						// 赋值给i 20
+        8: iload_1							// 加载局部变量表1号位置的数10到操作数栈
+        9: ireturn 							// 返回操作数栈顶元素 10
+       10: astore_2
+       11: bipush        20
+       13: istore_0
+       14: aload_2 							// 加载异常
+       15: athrow 							// 抛出异常
+     Exception table:
+        from    to  target type
+            3     5    10   anyCopy
+```
+
 ## 2.5 try with resource
 
-<!--P378-->
+### 2.5.1 JDK7特性
 
-之前的异常一直是抛出处理，实际开发中并不能这么处理，建议使用`try...catch...finally`代码块，处理异常部分。
-
-代码部分：
+`JDK 7` 开始新增了对需要关闭的资源处理的特殊语法 `try-with-resources`：
 
 ```java
-import java.io.FileWriter;
-import java.io.IOException;
+try(资源变量 = 创建资源对象){
+    
+} catch( ) {
+    
+}
+```
 
-public class Demo01TryCatch {
+其中资源对象需要实现 `AutoCloseable` 接口，例如 `InputStream` 、 `OutputStream` 、`Connection` 、 `Statement` 、 `ResultSet` 等接口都实现了 `AutoCloseable` ，使用 `try-withresources` 可以不用写 finally 语句块，编译器会帮助生成关闭资源代码，例如：
+
+```java
+public class Demo01 {
     public static void main(String[] args) {
-        // 提高变量fw的作用域，让finally可以使用
-        // 变量在定义的时候可以没有值，但是使用的时候必须有值，如果new对象失败会没有值，所以需要提前赋值
-        FileWriter fw = null;
+        try(InputStream is = new FileInputStream("d:\\1.txt")) {
+            System.out.println(is);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
 
+会被转换为：
+
+```java
+public class Demo01 {
+    public Demo01() {
+    }
+    
+    public static void main(String[] args) {
         try {
-            // 可能会产生异常的代码
-            fw = new FileWriter("09_IOAndProperties\\h.txt");
-
-            for (int i = 0; i < 10; i++) {
-                fw.write("hellow world" + i + "\r\n");
-            }
-
-        } catch(IOException e) {
-            // 异常的处理逻辑
-            System.out.println(e);
-
-        } finally {
-            // 一定会使用的代码
-            // 创建对象失败了，那么fw的默认值就是null，null是不能调用方法的，会抛出异常，所以需要提前判断一下
-            if (fw != null) {
-                try {
-                    // fw.close方法声明抛出了IOException异常对象，所以需要处理
-                    fw.close();
-                } catch (IOException e) {
-                    e.printStackTrace();
+            InputStream is = new FileInputStream("d:\\1.txt");
+            Throwable t = null;
+            try {
+                System.out.println(is);
+            } catch (Throwable e1) {
+                // t 是我们代码出现的异常
+                t = e1;
+                throw e1;
+            } finally {
+                // 判断了资源不为空
+                if (is != null) {
+                    // 如果我们代码有异常
+                    if (t != null) {
+                        try {
+                            is.close();
+                        } catch (Throwable e2) {
+                            // 如果 close 出现异常，作为被压制异常添加
+                            t.addSuppressed(e2);
+                        }
+                    } else {
+                        // 如果我们代码没有异常，close 出现的异常就是最后 catch 块中的 e
+                        is.close();
+                    }
                 }
             }
+        } catch (IOException e) {
+            e.printStackTrace();
         }
     }
 }
 ```
 
-<!--P379 1.4-->
-
-JDK7的新特性：
-
-​	在try后边加一个()，在括号中定义流对象。
-
-​	try代码执行完毕后，流对象可以释放掉，不用写finally。
+为什么要设计一个 `addSuppressed(Throwable e)` （添加被压制异常）的方法呢？是为了防止异常信息的丢失（想想 try-with-resources 生成的 fianlly 中如果抛出了异常）：
 
 ```java
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-
-public class Demo02JDK7 {
+public class Test6 {
     public static void main(String[] args) {
-        try(        // 1.创建一个字节输入流对象，构造方法中绑定要读取的数据源
-                    FileInputStream fis = new FileInputStream("D:\\图片\\动漫\\清纯诱惑\\18.jpg");
-                    // 2.创建一个字节输出流对象，构造方法中绑定写入的目的地
-                    FileOutputStream fos = new FileOutputStream("D:\\Java\\18.jpg");) {
-            // 3.使用字节输入流对象中的方法read读取文件
-            // 4.使用字节输出流中的方法write，把读取到的字节写入到目的地文件中
-            int len = 0;
-            while((len = fis.read()) != -1) {
-                fos.write(len);
-            }
-            
-        } catch (IOException e) {
-            System.out.println(e);
+        try (MyResource resource = new MyResource()) {
+            int i = 1/0;
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 }
+class MyResource implements AutoCloseable {
+    public void close() throws Exception {
+        throw new Exception("close 异常");
+    }
+}
 ```
+
+输出：
+
+```apl
+java.lang.ArithmeticException: / by zero
+    at test.Test6.main(Test6.java:7)
+    Suppressed: java.lang.Exception: close 异常
+        at test.MyResource.close(Test6.java:18)
+        at test.Test6.main(Test6.java:6)
+```
+
+如以上代码所示，两个异常信息都不会丢。
+
+### 2.5.2 JDK9特性
 
 JDK9的新特性：
 
 * try前面定义流对象。
 
-* try后面的()中可以直接引入遛对象的名称(变量名)。
+* try后面的()中可以直接引入对象的名称(变量名)。
 
 * try代码执行完毕后，流对象可以释放掉，不用写finally。
 
 * 定义流对象的时候有异常要抛出处理。
 
-  格式：
 
-  ```
-  	A a = new A();
-  	B b = new B();
-  	
-  	try(a；b) {
-  		可能会产生异常的代码
-  	} catch(异常类变量 变量名) {
-  		异常的处理逻辑
-  	}
-  ```
+格式如下：
 
 ```java
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
-import java.io.IOException;
+A a = new A();
+B b = new B();
 
+try(a；b) {
+    可能会产生异常的代码
+} catch(异常类变量 变量名) {
+    异常的处理逻辑
+}
+```
+
+```java
 public class Demo03JDK9 {
     public static void main(String[] args) throws FileNotFoundException {
         // 1.创建一个字节输入流对象，构造方法中绑定要读取的数据源
-        FileInputStream fis = new FileInputStream("D:\\图片\\动漫\\清纯诱惑\\18.jpg");
+        FileInputStream fis = new FileInputStream("D:\\图片\\18.jpg");
         // 2.创建一个字节输出流对象，构造方法中绑定写入的目的地
         FileOutputStream fos = new FileOutputStream("D:\\Java\\19.jpg");
 
@@ -652,159 +727,117 @@ public class Demo03JDK9 {
 }
 ```
 
+## 2.6 异常注意事项
 
+运行时异常被抛出可以不处理。即不捕获也不声明抛出。
 
+### 2.6.1 多个异常捕获
 
+多个异常使用捕获又该如何处理呢？
 
-## 2.5 异常注意事项
+1. 多个异常分别处理。
+2. 多个异常一次捕获，多次处理。
+3. 多个异常一次捕获一次处理。
 
-* 多个异常使用捕获又该如何处理呢？
-
-  1. 多个异常分别处理。
-  2. 多个异常一次捕获，多次处理。
-  3. 多个异常一次捕获一次处理。
-
-  一般我们时使用一次捕获多次处理方式，格式如下：
+一般我们时使用一次捕获多次处理方式，格式如下：
 
 ```java
-	try {
-        编写可能会出现异常的代码
-    } catch(异常类型A e) {当try中出现A类型异常，就用该catch来捕获。
-        处理异常的代码
-        // 记录日志/打印异常信息/继续抛出异常
-    } catch(异常类型B e) {当try中出现B类型异常，就用该catch来捕获。
-        处理异常的代码
-        // 记录日志/打印异常信息/继续抛出异常
-    }
+try {
+    编写可能会出现异常的代码
+} catch(异常类型A e) { // 当try中出现A类型异常，就用该catch来捕获。
+    处理异常的代码 	// 记录日志/打印异常信息/继续抛出异常
+} catch(异常类型B e) { // 当try中出现B类型异常，就用该catch来捕获。
+    处理异常的代码 	// 记录日志/打印异常信息/继续抛出异常
+}
 ```
 
-> 注意：这种异常处理方式，要求多个catch中的异常不能想同，并且若catch中的多个异常之间有子父类异常的关系，那么子类异常要求在上面的catch处理，父类异常在下面的catch处理。
+> 注意：这种异常处理方式，要求多个catch中的异常不能相同，并且若catch中的多个异常之间有子父类异常的关系，那么子类异常要求在上面的catch处理，父类异常在下面的catch处理。
 
 ```java
-import java.util.List;
-
-/*
-    try {
-        编写可能会出现异常的代码
-    } catch(异常类型A e) {当try中出现A类型异常，就用该catch来捕获。
-        处理异常的代码
-        // 记录日志/打印异常信息/继续抛出异常
-    } catch(异常类型B e) {当try中出现B类型异常，就用该catch来捕获。
-        处理异常的代码
-        // 记录日志/打印异常信息/继续抛出异常
-    }
- */
 public class Demo01Exception {
     public static void main(String[] args) {
 
-        /*
-            多个异常使用捕获又该如何处理呢？
-                1. 多个异常分别处理。
-                2. 多个异常一次捕获，多次处理。
-                3. 多个异常一次捕获一次处理。
-         */
-
         // 1.多个异常分别处理。
-        /*try {
+        try {
             int[] arr = {1, 2, 3};
-            System.out.println(arr[3]);// ArrayIndexOutOfBoundsException: Index 3 out of bounds for length 3
+            // ArrayIndexOutOfBoundsException: Index 3 out of bounds for length 3
+            System.out.println(arr[3]);
         } catch (ArrayIndexOutOfBoundsException e) {
             System.out.println(e);
-        }*/
+        }
 
-        /*try {
+        try {
             List<Integer> list = List.of(1, 2, 3);
-            System.out.println(list.get(3));// IndexOutOfBoundsException :Index 3 out of bounds for length 3
+            // IndexOutOfBoundsException :Index 3 out of bounds for length 3
+            System.out.println(list.get(3));
         } catch (ArrayIndexOutOfBoundsException e) {
             System.out.println(e);
-        }*/
+        }
+    }
+}
+```
+
+```java
+public class Demo01Exception {
+    public static void main(String[] args) {
 
         // 2.多个异常一次捕获，多次处理
         /*
             一个try多个catch注意事项：
-                catch里面定义的异常变量，如果有子父类关系，那么子类的异常白能量必须写在上面，否则就会报错
+                catch里面定义的异常变量，如果有子父类关系，那么子类的异常必须写在上面，否则就会报错
                 ArrayIndexOutOfBoundsException extends IndexOutOfBoundsException
          */
-        /*try {
+        try {
             int[] arr = {1, 2, 3};
-            System.out.println(arr[3]);// ArrayIndexOutOfBoundsException: Index 3 out of bounds for length 3
+            // ArrayIndexOutOfBoundsException: Index 3 out of bounds for length 3
+            System.out.println(arr[3]);
             List<Integer> list = List.of(1, 2, 3);
-            System.out.println(list.get(3));// IndexOutOfBoundsException :Index 3 out of bounds for length 3
+            // IndexOutOfBoundsException :Index 3 out of bounds for length 3
+            System.out.println(list.get(3));
         } catch (ArrayIndexOutOfBoundsException e) {
             System.out.println(e);
         } catch (IndexOutOfBoundsException e) {
             System.out.println(e);
-        }*/
+        }
+    }
+}
+```
 
+```java
+public class Demo01Exception {
+    public static void main(String[] args) {
         // 3.多个异常一次捕获一次处理
         try {
             int[] arr = {1, 2, 3};
-            System.out.println(arr[3]);// ArrayIndexOutOfBoundsException: Index 3 out of bounds for length 3
+            // ArrayIndexOutOfBoundsException: Index 3 out of bounds for length 3
+            System.out.println(arr[3]);
             List<Integer> list = List.of(1, 2, 3);
-            System.out.println(list.get(3));// IndexOutOfBoundsException :Index 3 out of bounds for length 3
+            // IndexOutOfBoundsException :Index 3 out of bounds for length 3
+            System.out.println(list.get(3));
         } catch (Exception e) {
             System.out.println(e);
         }
         System.out.println("后续代码！");
-
     }
 }
 ```
 
-* 运行时异常被抛出可以不处理。即不捕获也不声明抛出。
-
-<!--P298-->
-
-* 如果finally有return语句，永远返回finally中的结果，避免该情况。
-
-```java
-/*
-    如果finally有return语句，永远返回finally中的结果，我们要避免这种情况的发生
- */
-public class Demo02Exception {
-    public static void main(String[] args) {
-        int a = getA();
-        System.out.println(a);
-    }
-
-    // 定义一个方法，返回变量a的值
-    public static int getA() {
-        int a = 10;
-
-        try {
-            return a;
-        } catch(Exception e) {
-            System.out.println(e);
-        } finally {
-            // 这是一定会执行的代码
-            a = 100;
-            return a;
-        }
-    }
-}
-```
-
-<!--P299-->
+### 2.6.3 子类继承父类异常
 
 * 如果父类抛出了多个异常，子类重写父类方法时，抛出和父类相同的异常或者是父类异常的子集或者不抛出异常。
 * 父类方法没有抛出异常，子类重写父类该方法时也不可抛出异常。此时子类产生该异常，只能捕获处理，不能声明抛出
 * 父类异常什么样子，子类异常就是什么样子
 
 ```java
-/*
-    - 如果父类抛出了多个异常，子类重写父类方法时，抛出和父类相同的异常或者是父类异常的子集或者不抛出异常。
-    - 父类方法没有抛出异常，子类重写父类该方法时也不可抛出异常。此时子类产生该异常，只能捕获处理，不能声明抛出
-    注意：
-        父类异常什么样子，子类异常就是什么样子
-
- */
 public class Fu {
     public void show01() throws NullPointerException, ClassCastException{}
     public void show02() throws IndexOutOfBoundsException{}
     public void show03() throws IndexOutOfBoundsException{}
     public void show04() {}
 }
+```
 
+```java
 class Zi extends Fu {
     // 子类重写父类方法时，抛出和父类相同的异常
     public void show01() throws NullPointerException, ClassCastException{}
@@ -827,108 +860,87 @@ class Zi extends Fu {
 }
 ```
 
-* 在try/catch后可以追加finally代码块，其中的代码一定会被执行，通常用于资源回收。
-
 # 第三章 自定义异常
 
-## 3.1 概述
+为什么需要自定义异常类：我们说了java中不同的异常类，分别表示着某一种具体的异常情况，那么在开发中总是有些异常情况是JDK没有定义好的，此时我们根据自己业务的异常情况来定义异常类。例如年龄负数问题，考试成绩负数问题等等。
 
-<!--P300-->
+什么是自定义异常类：在开发中根据自己业务的异常情况来定义异常类。
 
-**为什么需要自定义异常类：**
+异常类如何定义：
 
-我们说了java中不同的异常类，分别表示着某一种具体的异常情况，那么在开发中总是有些异常情况是SUN没有定义好的，此时我们根据自己业务的异常情况来定义异常类。例如年龄负数问题，考试成绩负数问题等等。
+1. 自定义一个编译期异常：自定义类并继承`java.lang.Exception`。
+2. 自定义一个运行时期的异常类：自定义类并继承`java.lang.RuntimeException`。
 
-在上述代码中，发现这些异常都是JDK内部定义好的，但是实际开发中也会出现很多异常，这些异常很可能在JDK中没有定义过，例如年龄负数问题，考试成绩负数问题等等。那么能不能自己定义异常呢？
-
-**什么是自定义异常类：**
-
-在开发中根据自己业务的异常情况来定义异常类。
-
-自定义一个业务逻辑异常：**RegisterException**。一个注册异常类。
-
-**异常类如何定义：**
-
-1. 自定义一个编译器异常：自定义类 并继承与`java.lang.Exception`。
-2. 自定义一个运行时期的异常类：自定义类 并继承与`java.lang.RuntimeException`。
+格式如下：
 
 ```java
-/*
-    自定义异常类：
-        java提供的异常类，不够我们使用，需要自己定义一些异常类
-    格式：
-        public class XXXException extends Exception / RuntimeException {
-            添加一个空参数的构造方法
-            添加一个带异常信息的构造方法
-        }
-    注意：
-        1.自定义异常类一般都是以Exception结尾，说明该类是一个异常类
-        2.自定义异常类，必须的继承Exception或者RuntimeException
-            继承Exception：那么自定义异常类就是一个编译器异常，如果方法内部抛出了编译期异常，就必须处理这个异常，要么throws，要么try...catch
-            继承RuntimeException：那么自定义的异常类就是一个运行期异常，无需处理，交给虚拟机处理（中断处理）
- */
+public class XXXException extends Exception / RuntimeException {
+    添加一个空参数的构造方法
+    添加一个带异常信息的构造方法
+}
+```
 
+1. 自定义异常类一般都是以Exception结尾，说明该类是一个异常类
+
+2. 自定义异常类，必须的继承Exception或者RuntimeException
+
+   继承`Exception`：继承了Exception也就是定义为受检查异常，则需要在使用者进行处理的。那么自定义异常类就是一个编译期异常，如果方法内部抛出了编译期异常，就必须处理这个异常，要么throws，要么try...catch
+
+   继承`RuntimeException`：那么自定义的异常类就是一个运行期异常，无需处理，交给虚拟机处理（中断处理）
+
+下面来联系一下自定义异常类：自定义一个业务逻辑异常：**RegisterException**。一个注册异常类。
+
+```java
 public class RegisterException extends Exception{
     // 添加一个空参数的构造方法
     public RegisterException() {
         super();
     }
 
-    /*
-        添加一个带异常信息的构造方法
-        查看源代码发现，所有的异常类都会有一个带异常信息的构造方法，方法内部会调用父类带异常信息的构造方法，让父类来处理这个异常信息
-     */
+    // 所有异常类都有一个带异常信息的构造方法 该方法内部调用父类带异常信息的构造方法 让父类来处理这个异常信息
     public RegisterException(String message) {
         super(message);
     }
-
 }
 ```
-
-## 3.2 自定义异常的练习
-
-要求：我们模拟注册操作，如果用户名已经存在，则抛出异常并提示：亲，该用户名已经被注册。
-
-首先定义一个登陆异常类RegisterException：
 
 ```java
-import java.util.Scanner;
+public class Demo01 {
+	// 1.使用数组保存已经注册过的用户名
+	static String[] usernames = { "张三", "李四", "王五" };
 
-public class Demo01RegisterException {
-    // 1.使用数组保存已经注册过的用户名
-    static String[] usernames = {"张三", "李四", "王五"};
+	public static void main(String[] args) {
+		// 2.使用Scanner获取用户输入的注册的用户名
+		Scanner sc = new Scanner(System.in);
+		System.out.println("请输入您要注册的用户名");
+		String username = sc.next();
+		checkUsername(username);
+		sc.close();
+	}
 
-    public static void main(String[] args) /*throws RegisterException*/ {
-        // 2.使用Scanner获取用户输入的注册的用户名
-        Scanner sc = new Scanner(System.in);
-        System.out.println("请输入您要注册的用户名");
-        String username = sc.next();
-        checkUsername(username);
-    }
+	// 3.定义一个方法，对用户输入的注册的用户名进行判断
+	public static void checkUsername(String username)  {
+		// 遍历存储已经注册过用户名的数组，获取每一个用户名
+		for (String name : usernames) {
+			// 使用获取到的用户名和用户输入的用户名进行比较
+			if (name.equals(username)) {
+				// true:用户名已存在，抛出RegisterException异常，告知用户“亲，该用户名已经被注册了”；
+				try {
+					throw new RegisterException("亲，该用户名已经被注册了");
+				} catch (RegisterException e) {
+					e.printStackTrace();
+					return;
+				}
+			}
+		}
 
-    // 3.定义一个方法，对用户输入的注册的用户名进行判断
-    public static void checkUsername(String username) /*throws RegisterException*/ {
-        // 遍历存储已经注册过用户名的数组，获取每一个用户名
-        for (String name: usernames) {
-            // 使用获取到的用户名和用户输入的用户名进行比较
-            if (name.equals(username)) {
-                // true:用户名已存在，抛出RegisterException异常，告知用户“亲，该用户名已经被注册了”；
-                try {
-                    throw new RegisterException("亲，该用户名已经被注册了");
-                } catch (RegisterException e) {
-                    e.printStackTrace();
-                    return;
-                }
-            }
-        }
-
-        // 循环结束，没有找到重复的用户名，提示用户“恭喜您，注册成功！”;
-        System.out.println("恭喜您，注册成功！");
-    }
+		// 循环结束，没有找到重复的用户名，提示用户“恭喜您，注册成功！”;
+		System.out.println("恭喜您，注册成功！");
+	}
 }
 ```
 
-# 第一章 Junit单元测试
+# 第四章 Junit单元测试
 
 测试分类：
 
@@ -952,7 +964,7 @@ public class Demo01RegisterException {
 4. 导入Junit依赖环境
 5. 运行测试方法，检查判定结果（测试方法可以独立运行，点击旁边的绿色小三角即可）
 
-## 1.1 判定结果
+## 4.1 判定结果
 
 * 红色：失败
 
@@ -1005,7 +1017,7 @@ public class CalculatorTest {
 }
 ```
 
-## 1.2 补充注解
+## 4.2 补充注解
 
 当我们在测试的时候会有很多重复的操作，例如IO流中的获取资源和释放资源。每当测试一个方法就需要重复操作。有注解可以帮助我们。
 
@@ -1029,5 +1041,3 @@ public void close() {
     System.out.println("close...");
 }
 ```
-
-# 
