--- a/1第一阶段/1-09【IO流】.md
+++ b/1第一阶段/1-09【IO流】.md
@@ -1,250 +1,48 @@
-# 第一章 IO概述
+# 第一章 IO四大基本流
 
-## 1.1 什么是IO
-
-java中I/O操作主要是指使用`java.io`包下的内容，进行输入、输出操作。**输入**也叫做**读取**数据，**输出**也叫做**写出**数据。
-
-## 1.2 IO的分类
+java中I/O操作主要是指使用`java.io`包下的内容，进行输入、输出操作。输入也叫做读取数据，输出也叫做写出数据。
 
 根据数据的流向分为：**输入流和输出流**。
 
 * **输入流**：把数据从其他设备上读取到内存中的流。
 * **输出流**：把数据从内存中写出到其它设备上的流。
 
-格局数据的类型分为：**字节流和字符流**。
-
-## 1.3 IO的流向说明图解
-
-Input.read();
-
-output.write();
+根据数据的类型分为：**字节流和字符流**。
 
 ![](..\图片\1-09【字节流、字符流】\1.png)
 
-## 1.4 顶级父类们
+I/O流的顶级父类们：
 
-|        | 输入流                       | 输出流                         |
-| ------ | ---------------------------- | ------------------------------ |
-| 字节流 | 字节输入流<br>**InputSteam** | 字节输出流<br>**OutputStream** |
-| 字符流 | 字符输入流<br>**Reader**     | 字符输出流<br>**Writer**       |
+|        | 输入流               | 输出流                 |
+| ------ | -------------------- | ---------------------- |
+| 字节流 | 字节输入流InputSteam | 字节输出流OutputStream |
+| 字符流 | 字符输入流Reader     | 字符输出流Writer       |
 
-
-
-# 第二章 字节流
-
-## 2.1 一切皆为字节
-
-<!--P359-->
+## 1.1 字节流
 
 一切文件数据（文本、图片、视频等）在存储时，都是以二进制数字的形式保存，都是一个一个的字节，那么传输时一样如此。所以，字节流可以传输任意文件数据。在操作流的时候，我们要时刻明确，无论使用什么样的流对象，底层传输的始终为二进制数据。
 
-## 2.2 字节输出流【OutputStream】
+### 1.1.1 InputStream
 
-<!--P360-->
+`java.io.InputStream`抽象类是表示字节输入流的所有类的超类，可以读取字节信息到内存中。它定义了字节输入流的基本共性功能方法。
 
-`java.io.OutputStream`抽象类是表示字节输出流的所有类的超类，将指定的字节信息写出到目的地。它定义了字节输出流的基本共性功能方法。
+* `public void close()`：关闭此输入流并是方法与此流相关联的任何系统资源。当完成流的操作时，必须调用此方法，释放系统资源。
+* `public abstract int read()`：从输入流读取数据的下一个字节。read()方法指针会自动转向下一个，最后没有的时候会返回-1。
+* `public int read(byte[] b)`：从输入流中读取一些字节数，并把它们存储到缓冲区数组b中。字节数组起到缓冲作用，存储每次读取到的多个字节。数组的长度定义的话，要定义为1024或者他的整数倍。方法的返回值int是每次读取的字节个数。
 
-抽象类无法创建对象，我们要使用他的子类来创建对象。
+`InputStream`是节输入流的所有类的超类，是一个抽象类，其中定义了许多方法，下面也有许多的类去继承该类。抽象类无法创建对象，我们要使用他的子类来创建对象。
 
-定义了一些子类共性的成员方法：
+`java.io.FileInputStream`类就是其中一个，继承`InputStream`重写了里面的方法。`FileInputStream`是文件输入流，从文件中读取字节。
 
-> 小贴士：
->
-> close方法，当完成流的操作时，必须调用此方法，释放系统资源。
+当创建一个流对象时，必须传入一个文件路径。该路径下，如果没有该文件，会抛出`FileNotFoundException`。
 
-## 2.3 FileOutputStream类
-
-`OutputStream`有很多子类，我们是从最简单的一个子类开始。
-
-`java.io.FileOutputStream`类是文件输出流，用于将数据写出文件，也就是把内存中的数据写入到硬盘的文件中。
-
-### 构造方法
-
-* `FileOutputStream(String name)`：创建一个向具有指定名称的文件中写入数据的输出文件流。
-
-* `FileOutputStream(File file)`：创建一个向指定 File 对象表示的文件中写入数据的文件输出流。
-
-  参数：写入数据的目的地
-
-  * `String name`: 目的地是一个文件的路径
-  * `File file`：目的地是一个文件
-
-  构造方法作用：
-
-  1. 创建一个`FileOutputStream`对象。
-  2. 会根据构造方法中传递的文件/文件路径，创建一个空的文件。
-  3. 会把FileOutputStream对象指向创建好的文件。
-
-### 写出字节数据
-
-<!--P361-->
+* `FileInputStream(File file)`：通过打开与实际文件的连接来创建一个`FileInputStream`，该文件由文件系统中的File对象file命名。
+* `FileInputStream(String name)`：通过打开与实际文件的连接来创建一个`FileInputStream`，该文件由文件系统中的路径名name命名。
 
 ```java
-import java.io.FileOutputStream;
-import java.io.IOException;
-
-/*
-
-* */
-// 字节输出流
-public class Demo01OutputStream {
-    public static void main(String[] args) throws IOException {
-        // 1.创建一个FileOutputStream对象，构造方法中传递写入数据的目的地
-        // Unhandled exception: java.io.FileNotFoundException
-        FileOutputStream fos = new FileOutputStream("D:\\B站视频\\79312032\\361\\a.txt");
-        // 2.调用FileOutputStream对象中的方法write，把数据写入到文件中
-        // public abstract void write(int b):将指定的字节输出流。
-        // Unhandled exception: java.io.IOException
-        fos.write(21);
-        // 3.释放资源
-        // Unhandled exception: java.io.IOException
-        fos.close();
-        // 这些异常有继承关系，所以直接抛出IOException异常处理
-    }
-}
-```
-
-<!--P363-->
-
-```java
-import java.io.File;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.util.Arrays;
-
-public class Demo02OutputStream {
-    public static void main(String[] args) throws IOException {
-        // 1.创建FIleOutputStream对象，构造方法中绑定要写入数据的目的地
-        FileOutputStream fos = new FileOutputStream(new File("D:\\B站视频\\79312032\\361\\b.txt"));
-        // 2.调用FIleOutputStream对象中的方法write，将数据写入到文件中
-        fos.write(49);
-        fos.write(48);
-        fos.write(48);
-
-        /*
-                public void write(byte[] b) :将b.length字节从指定的字节数组写入此输出流。
-                一次写多个字节：
-                    如果写的第一个字节是整数（0-127），那么显示的时候会查询ASCII表
-                    如果写的第一个字节是负数，则第一个字节和第二个字节组成一个中文显示，查询系统默认码表（GBK）
-         */
-        // byte[] bytes = {65, 66, 67, 68, 69}; // ABCDE
-        // byte[] bytes = {-65, -66, -67, 68, 69}; // 烤紻E
-        // fos.write(bytes);
-
-        /*
-                public void write(byte[] b, int off, int len) :把字节数组一部分写入到文件中
-                从指定的字节数组写入len字节，从偏移量off开始输出到此输出流。
-                    int off:数组的开始索引
-                    ing len:写几个字节
-         */
-        // byte[] bytes = {65, 66, 67, 68, 69}; // ABCDE
-        // fos.write(bytes, 1, 2); // BC
-
-        /*
-                写入字符的方法：可以使用String类中的方法把字符串转换为字节数组
-                    byte[] getBytes():把字符串转换为字符数组
-                GBK中中文字符是两个字节，而UTF-8是三个字节
-         */
-        byte[] bytes = "你好".getBytes();
-        // System.out.println(Arrays.toString(bytes));
-        fos.write(bytes);
-
-        fos.close();
-    }
-}
-```
-
-### 数据追加续写
-
-<!--P364-->
-
-每当程序重新运行的时候，都会清空目标文件中的数据。
-
-* `public FIleOutputStream(File file, boolean append)` :创建文件输出流以写入由指定的FIle对象表示的文件。
-* `public FIleOutputStream(String name, boolean append)` :创建文件输出流以指定的名称写入文件。
-
-这两个构造方法，参数中有一个boolean类型的值，`true`表示追加数据，`false`表示清空原有数据。
-
-```java
-import java.io.FileOutputStream;
-import java.io.IOException;
-
-/*
-    public FIleOutputStream(String name, boolean append) :创建文件输出流以指定的名称写入文件。
-    换行的话，也是转义字符
-    Windows：\r\n
-    linux:/r
-    mac:/n
- */
-// 追加读写
-public class Demo03OutputStream {
-    public static void main(String[] args) throws IOException {
-        // public FIleOutputStream(String name, boolean append) :创建文件输出流以指定的名称写入文件。
-        FileOutputStream fos = new FileOutputStream("D:\\B站视频\\79312032\\364\\a.txt", true);
-        // 写入字符的方法：可以使用String类中的方法把字符串转换为字节数组
-        fos.write("nihao".getBytes());
-        fos.write("\r\n".getBytes());
-        fos.close();
-    }
-}
-```
-
-## 2.4 字节输入流【InputStream】
-
-<!--P365-->
-
-`java.io.InputStream`抽象类是表示字节输入流的所有类的超类，可以读取字节信息到内存中。它定义 了字节输入流的基本共性功能方法。
-
-* `public void close()` :关闭此输入流并是方法与此流相关联的任何系统资源。
-* `public abstract int read()` :从输入流读取数据的下一个字节。
-* `public int read(byte[] b)` :从输入流中读取一些字节数，并把它们存储到字节数组b中。
-
-> 小贴士：
->
-> close方法，当完成流的操作时，必须调用此方法，释放系统资源。
-
-## 2.5 FileInputStream类
-
-`java.io.FileInputStream`类是文件输入流，从文件中读取字节。
-
-### 构造方法
-
-* `FileInputStream(File file)` :通过打开与实际文件的连接来创建一个`FileInputStream`，该文件由文件系统中的File对象file命名。
-* `FileInputStream(String name)` :通过打开与实际文件的连接来创建一个`FileInputStream`，该文件由文件系统中的路径名name命名。
-
-当你创建一个流对象时，必须传入一个文件路径。该路径下，如果没有该文件，会抛出`FileNotFoundException`。
-
-### 读取字节数据
-
-<!--P366-->
-
-1. 读取字节：`read`方法，每次可以读取一个字节的数据，提升为`int`类型，读取到文件末尾，返回`-1`。
-
-   代码演示：
-
-```java
-import java.io.FileInputStream;
-import java.io.IOException;
-
-/*
-    read()方法指针会自动转向下一个
-    最后没有的时候会返回-1
- */
 public class Demo01InputStream {
     public static void main(String[] args) throws IOException {
         FileInputStream fis = new FileInputStream("09_IOAndProperties\\a.txt");
-
-/*        int len = fis.read();
-        System.out.println(len);
-
-        len = fis.read();
-        System.out.println(len);
-
-        len = fis.read();
-        System.out.println(len);
-
-        len = fis.read();
-        System.out.println(len);*/
 
         int len = 0;
         while ((len = fis.read()) != -1) {
@@ -257,46 +55,10 @@ public class Demo01InputStream {
 }
 ```
 
-<!--P368-->
-
 ```java
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.util.Arrays;
-
-/*
-    字节输入流一次读取多个字节的方法：
-        int read(byte[] b) 从输入流中读取一定数量的字节，并将其存储在缓冲区数组b中
-    明确两件事情：
-        1.方法的参数byte[]作用：
-            起到缓冲作用，存储每次读取到的多个字节
-            数组的长度定义的话，要定义为1024或者他的整数倍
-        2.方法的返回值int是：
-            每次读取的字节个数
- */
 public class Demo02InputStream {
     public static void main(String[] args) throws IOException {
         FileInputStream fis = new FileInputStream("09_IOAndProperties\\a.txt");
-/*        byte[] bytes = new byte[2];
-
-        // 方法的返回值int是：每次读取的字节个数
-        int len = fis.read(bytes);
-        System.out.println(len);
-
-        // System.out.println(Arrays.toString(bytes));
-        System.out.println(new String(bytes));
-
-        len = fis.read(bytes);
-        System.out.println(len);
-        System.out.println(new String(bytes));
-
-        len = fis.read(bytes);
-        System.out.println(len);
-        System.out.println(new String(bytes));
-
-        len = fis.read(bytes);
-        System.out.println(len);
-        System.out.println(new String(bytes));*/
 
         // 使用while循环
         byte[] bytes = new byte[1024];
@@ -312,143 +74,126 @@ public class Demo02InputStream {
 }
 ```
 
-## 2.6 字节流联系：图片复制
+### 1.1.2 OutputStream
 
-### 案例实现
+`java.io.OutputStream`抽象类是表示字节输出流的所有类的超类，将指定的字节信息写出到目的地。它定义了字节输出流的基本共性功能方法。
 
-<!--P369-->
+定义了一些子类共性的成员方法：
+
+- `void close()`：关闭此输出流并释放与此流相关联的任何系统资源。  
+- `void flush()` ：刷新此输出流并强制任何缓冲的输出字节被写出。  
+- `void write(byte[] b)`：将 b.length字节从指定的字节数组写入此输出流。 一次写多个字节的话，如果写的第一个字节是整数（0-127），那么显示的时候会查询ASCII表，如果写的第一个字节是负数，则第一个字节和第二个字节组成一个中文显示，查询系统默认码表（GBK）。
+
+  ```java
+  // byte[] bytes = {65, 66, 67, 68, 69}; // ABCDE
+  // byte[] bytes = {-65, -66, -67, 68, 69}; // 烤紻E
+  ```
+- `void write(byte[] b, int off, int len)`：从指定的字节数组写入len个字节，从偏移off开始输出到此输出流。  off:数组的开始索引，len:写几个字节。
+- `abstract void write(int b)` ：将指定的字节写入此输出流。  
+
+抽象类无法创建对象，我们要使用他的子类来创建对象。`OutputStream`有很多子类，我们是从最简单的一个子类开始。`java.io.FileOutputStream`类是文件输出流，用于将数据写出文件，也就是把内存中的数据写入到硬盘的文件中。
+
+* `FileOutputStream(String name)`：创建一个向具有指定名称的文件中写入数据的输出文件流。
+
+* `FileOutputStream(File file)`：创建一个向指定 File 对象表示的文件中写入数据的文件输出流。
+
+* `FIleOutputStream(File file, boolean append)`：创建文件输出流以写入由指定的FIle对象表示的文件。参数中有一个boolean类型的值，`true`表示追加数据，`false`表示清空原有数据。
+
+* `FIleOutputStream(String name, boolean append)`：创建文件输出流以指定的名称写入文件。参数中有一个boolean类型的值，`true`表示追加数据，`false`表示清空原有数据。
 
 ```java
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-
-/*
-    文件复制练习：一读一写
-
-    明确：
-        数据源：D:\\图片\\1.jpg
-        数据目的地：D:\\Java
-
-    文件赋值步骤：
-        1.创建一个字节输入流对象，构造方法中绑定要读取的数据源
-        2.创建一个字节输出流对象，构造方法中绑定写入的目的地
-        3.使用字节输入流对象中的方法read读取文件
-        4.使用字节输出流中的方法write，把读取到的字节写入到目的地文件中
-        5.释放资源
- */
-public class Demo01CopyFile {
+// 字节输出流
+public class Demo01OutputStream {
     public static void main(String[] args) throws IOException {
-        // 测试时间
-        long s = System.currentTimeMillis();
-
-        // 1.创建一个字节输入流对象，构造方法中绑定要读取的数据源
-        FileInputStream fis = new FileInputStream("D:\\图片\\动漫\\清纯诱惑\\18.jpg");
-        // 2.创建一个字节输出流对象，构造方法中绑定写入的目的地
-        FileOutputStream fos = new FileOutputStream("D:\\Java\\18.jpg");
-
-        // 3.使用字节输入流对象中的方法read读取文件
-        // 4.使用字节输出流中的方法write，把读取到的字节写入到目的地文件中
-/*        int len = 0;
-        while((len = fis.read()) != -1) {
-            fos.write(len);
-        }*/
-
-        // 使用数组缓冲读取多个字节，写入多个字节，速度更快
-        byte[] bytes = new byte[1024];
-        // 3.使用字节输入流对象中的方法read读取文件
-        // 4.使用字节输出流中的方法write，把读取到的字节写入到目的地文件中
-        int len = 0;
-        while((len = fis.read(bytes)) != -1) {
-            fos.write(bytes);
-        }
-
-        // 5.释放资源
-        // 先关闭写的流，因为写完了，那么肯定已经读取完毕了。
+        // 1.创建一个FileOutputStream对象，构造方法中传递写入数据的目的地
+        FileOutputStream fos = new FileOutputStream("D:\\B站视频\\79312032\\361\\a.txt");
+        // 2.调用FileOutputStream对象中的方法write，把数据写入到文件中
+        fos.write(21);
+        // 3.释放资源
         fos.close();
-        fis.close();
-
-        // 测试时间
-        long end = System.currentTimeMillis();
-        // 文件大小不同，耗时不同
-        System.out.println("耗时为：" + (end - s) + "毫秒");
-
     }
 }
 ```
 
-# 第三章 字符流
+```java
+public class Demo02OutputStream {
+    public static void main(String[] args) throws IOException {
+        // 1.创建FIleOutputStream对象，构造方法中绑定要写入数据的目的地
+        FileOutputStream fos = new FileOutputStream(new File("D:\\B站视频\\79312032\\361\\b.txt"));
+        // 2.调用FIleOutputStream对象中的方法write，将数据写入到文件中
+        fos.write(49);
+        fos.write(48);
+        fos.write(48);
 
-<!--P370-->
+        // 写入字符的方法：可以使用String类中的方法把字符串转换为字节数组
+        // byte[] getBytes():把字符串转换为字符数组
+        // GBK中中文字符是两个字节，而UTF-8是三个字节
+        byte[] bytes = "你好".getBytes();
+        // System.out.println(Arrays.toString(bytes));
+        fos.write(bytes);
 
-使用字节流读取文本文件的时候，会有一些小问题，遇到中文字符，不会显示完整的字符，因为一个中文字符可能占用多个字节存储。所以java提供一些字符流类，以字符为单位读写数据，专门处理文本文件
+        fos.close();
+    }
+}
+```
 
-## 3.1 字符输入流【Reader】
+上面两个程序每当重新运行的时候，都会清空目标文件中的数据，可以使用另外的构造方法来放指清空数据。那么就会涉及到换行，换行的转义字符在三个系统中是不同的：    Windows：`\r\n`    linux:`/r`    mac:`/n`。
 
-<!--P371 1.3-->
+```java
+public class Demo03OutputStream {
+    public static void main(String[] args) throws IOException {
+        // public FIleOutputStream(String name, boolean append)：创建文件输出流以指定的名称写入文件。
+        FileOutputStream fos = new FileOutputStream("D:\\B站视频\\79312032\\364\\a.txt", true);
+        // 写入字符的方法：可以使用String类中的方法把字符串转换为字节数组
+        fos.write("nihao".getBytes());
+        fos.write("\r\n".getBytes());
+        fos.close();
+    }
+}
+```
+
+## 1.2 字符流
+
+使用字节流读取文本文件的时候，会有一些小问题，遇到中文字符，不会显示完整的字符，因为一个中文字符可能占用多个字节存储。所以java提供一些字符流类，以字符为单位读写数据，专门处理文本文件。
+
+字符编码：字节与字符的对应规则。Windows系统的中文编码默认是GBK编码表。idea中是UTF-8。
+
+### 1.2.1 Reader
+
+字符输入流Reader
 
 `java.io.Reader`抽象类是表示用于读取字符流的所有类的超类，可以读取字符信息到内存中。它定义了字符输入流的基本共性方法。
 
-* `public void close()` :关闭此流并释放与此流相关联的任何系统资源。
-* `public int read()` :从输入流中读取一个字符。
-* `public int read(char[] cbuf)` :从输入流中读取一些字符，并将他们存储到字符数组cbuf中。
+* `public void close()`：关闭此流并释放与此流相关联的任何系统资源。
+* `public int read()`：从输入流中读取一个字符。
+* `public int read(char[] cbuf)`：从输入流中读取一些字符，并将他们存储到字符数组cbuf中。返回值是每次读取的有效字符个数。
 
-## 3.2 FIleReader类
-
-`java.io.FileReader`类是读取字符文件的便利类。构造时使用系统默认的字符编码和默认字节缓冲区。
-
-> 小贴士：
->
-> 1. 字符编码：字节与字符的对应规则。Windows系统的中文编码默认是GBK编码表。idea中是UTF-8。
-
-### 读取字符数据
+抽象类无法创建对象，我们要使用他的子类来创建对象。`Reader`有很多子类，我们来研究一下`FileReader`类。`java.io.FileReader`类是读取字符文件的便利类。构造时使用系统默认的字符编码和默认字节缓冲区。`FileReader`文件字符输入流，把硬盘文件中的数据以字符的方式读取到内存中。
 
 ```java
-import java.io.FileOutputStream;
-import java.io.FileReader;
-import java.io.IOException;
+// 继承关系
+public class FileReader extends InputStreamReader
+public class InputStreamReader extends Reader
+```
 
-/*
-    java.io.Reader：字符输入流，是字符输入流的最顶层的父类，定义了一些共性的成员方法，是一个抽象类。
-    共性的成员方法：
-        - public void close() :关闭此流并释放与此流相关联的任何系统资源。
-        - public int read() :从输入流中读取一个字符。
-        - public int read(char[] cbuf) :从输入流中读取一些字符，并将他们存储到字符数组cbuf中。
+* FileReader(String fileName)：创建一个FileReader对象，会把FileReader对象指向要读取的文件。
+* FileReader(File file)：创建一个FileReader对象，会把FileReader对象指向要读取的文件。
 
-    java.io.FileReader extends InputStreamReader extends Reader
-    FileReader:文件字符输入流
-    作用：把硬盘文件中的数据以字符的方式读取到内存中
-
-    构造方法：
-        FileReader（String fileName）
-        FileReader（File file）
-        参数：读取文件的数据源
-            String fileName：文件的路径
-            File file：一个文件
-        FileReader构造方法的作用：
-            1.创建一个FileReader对象
-            2.会把FileReader对象指向要读取的文件
- */
+```java
 public class Demo01Reader {
     public static void main(String[] args) throws IOException {
         // 首先创建文件
-        /*FileOutputStream fos = new FileOutputStream("09_IOAndProperties\\c.txt");
+        FileOutputStream fos = new FileOutputStream("D:\\c.txt");
         byte[] bytes = "你好###abc123".getBytes();
         fos.write(bytes);
-        fos.close();*/
+        fos.close();
 
         // 字符read
-        FileReader fr = new FileReader("09_IOAndProperties\\c.txt");
-/*        int len = 0;
-        while((len = fr.read()) != -1) {
-            System.out.print((char)len); // 你好###abc123
-        }*/
-
+        FileReader fr = new FileReader("D:\\c.txt");
         // int read(char[] cbuf)一次读取多个字符，将字符读入数组
-        char[] cs = new char[1024];// 存储读取到的多个字符
-        int len = 0;// 记录的是每次读取的有效字符个数
+        char[] cs = new char[1024];
+        int len = 0; // 记录的是每次读取的有效字符个数
         while((len = fr.read(cs)) != -1) {
-            // String 类的构造方法
             // String(char[] value) 把字符数组转换为字符串
             // String(char[] value, int offset, int count) 把字符数组的一部分转换为字符串
             System.out.println(new String(cs, 0, len));
@@ -459,39 +204,28 @@ public class Demo01Reader {
 }
 ```
 
-## 3.3 字符输出流【Writer】
+### 1.2.2 Writer
 
-<!--P373-->
+字符输出流Writer
 
 `java.io.Writer`抽象类是表示用于写出字符流的所有类的超类，将指定的字符信息写入到目的地。它定义了字符输出流的基本共性功能方法。
 
-* `void Write(int c)` :写入单个字符。
-* `void Write(char[] cbuf)` :写入字符数组。
-* `abstract void Write(char[] cbuf, int off, int len)` :写入字符数组的某一部分，off数组的开始所以，len写的字符个数。
-* `void Write(String str)` :写入字符串。
-* `void Write(String str, int off, int len)` :写入字符串的某一部分，off字符串的开始索引，len写的字符个数。
-* `void flush()` :刷新该流的缓冲。
-* `void close()` :关闭此流，但是要先刷新它。
-
-## 3.4 FileWriter类
+* `void Write(int c)`：写入单个字符。
+* `void Write(char[] cbuf)`：写入字符数组。
+* `abstract void Write(char[] cbuf, int off, int len)`：写入字符数组的某一部分，off数组的开始所以，len写的字符个数。
+* `void Write(String str)`：写入字符串。
+* `void Write(String str, int off, int len)`：写入字符串的某一部分，off字符串的开始索引，len写的字符个数。
+* `void flush()`：刷新该流的缓冲。
+* `void close()`：关闭此流，但是要先刷新它。
 
 `java.io.FileWriter`类是写出字符到文件的便利类。构造时使用系统默认的字符编码和默认字节缓冲区。
 
-### 构造方法
-
 * `FileWriter(File file)`：根据给定的 File 对象构造一个 FileWriter 对象。
 * `FileWriter(String fileName)`：根据给定的文件名构造一个 FileWriter 对象。
+* `FileWriter(String fileName, boolean append)` ：根据给定的文件名构造一个 FileWriter 对象。参数中有一个boolean类型的值，`true`表示追加数据，`false`表示清空原有数据。
+* `FileWriter(File file, boolean append)`：根据给定的 File 对象构造一个 FileWriter 对象。参数中有一个boolean类型的值，`true`表示追加数据，`false`表示清空原有数据。
 
 ```java
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
-
-/*
-    - FileWriter(File file)：根据给定的 File 对象构造一个 FileWriter 对象。
-    - FileWriter(String fileName)：根据给定的文件名构造一个 FileWriter 对象。
-
- */
 public class Demo01Writer {
     public static void main(String[] args) throws IOException {
         // 使用File对象创建流对象
@@ -504,21 +238,7 @@ public class Demo01Writer {
 }
 ```
 
-### 基本写出数据
-
-<!--P374-->
-
 ```java
-import java.io.FileWriter;
-import java.io.IOException;
-
-/*
-    字符输出流的使用步骤：
-        1.创建FileWriter对象，构造方法中绑定要写入数据的目的地
-        2.使用FileWriter中的方法Write，把数据写入到内存缓冲区中（字符转换为字节的过程）
-        3.使用FileWriter中的方法flush，把内存缓冲区的数据，刷新到文件中
-        4.释放资源（会先把内存缓冲区的数据刷新到文件中）
- */
 public class Demo02Writer {
     public static void main(String[] args) throws IOException {
         // 1.创建FileWriter对象，构造方法中绑定要写入数据的目的地
@@ -534,11 +254,7 @@ public class Demo02Writer {
 }
 ```
 
-### 关闭和刷新
-
-<!--P375-->
-
-因为内置缓冲区的原因，如果不关闭输出流，是无法写出字符到文件中的。但是关闭的流对象，是无法继续写出字符的。如果我们既想写出数据，又想继续使用流，就需要使用`flush`方法了。
+因为内置缓冲区的原因，如果不关闭输出流，是无法写字符到文件中的。但是关闭流对象，是无法继续写出字符的。如果我们既想写出数据，又想继续使用流，就需要使用`flush`方法了。JDK9直接写，测试不用刷新也可以。
 
 * `flush`：刷新缓冲区，流对象可以继续使用。
 * `close`：先刷新缓冲区，然后通知系统释放资源。流对象不可以再被使用了。
@@ -554,39 +270,19 @@ public class Demo03CloseAndFlush {
         fw.flush();
 
         fw.close();
-        // 关闭之后 java.io.IOException: Stream closed
-        // fw.write(99);
     }
 }
 ```
 
-### 写出其他数据
-
-<!--P376-->
-
 ```java
-/*
-    写入字符数组的其他方法
-    - void Write(char[] cbuf) :写入字符数组。
-    - abstract void Write(char[] cbuf, int off, int len) :写入字符数组的某一部分，off数组的开始所以，len写的字符个数。
-    - void Write(String str) :写入字符串。
-    - void Write(String str, int off, int len) :写入字符串的某一部分，off字符串的开始索引，len写的字符个数。
- */
 public class Demo04Writer {
     public static void main(String[] args) throws IOException {
         FileWriter fw = new FileWriter("09_IOAndProperties\\f.txt");
 
         char[] cs = {'a', 'b', 'c', 'd'};
-        // void Write(char[] cbuf) :写入字符数组。
         fw.write(cs);
-
-        // abstract void Write(char[] cbuf, int off, int len) :写入字符数组的某一部分，off数组的开始所以，len写的字符个数。
         fw.write(cs, 0, 2);
-
-        // void Write(String str) :写入字符串。
         fw.write("林炫");
-
-        // void Write(String str, int off, int len) :写入字符串的某一部分，off字符串的开始索引，len写的字符个数。
         fw.write("林炫你好呀", 2, 3);
 
         fw.close();
@@ -594,25 +290,11 @@ public class Demo04Writer {
 }
 ```
 
-### 续写和换行
-
-<!--P377-->
-
-* 续写：追加写，使用两个参数的构造方法
-
-  `FileWriter(String fileName, boolean append)` 
-
-  `FileWriter(File file, boolean append)`
-
-* 换行：换行符号
-
 ```java
-import java.io.FileWriter;
-import java.io.IOException;
-
 public class Demo05Writer {
     public static void main(String[] args) throws IOException {
-        FileWriter fw = new FileWriter("09_IOAndProperties\\g.txt");
+        // 第二次运行该程序 那么之前写的字符不会消失 会在后面追加
+        FileWriter fw = new FileWriter("D:\\g.txt", true);
 
         for (int i = 0; i < 10; i++) {
             fw.write("hellow world" + i + "\r\n");
@@ -623,17 +305,7 @@ public class Demo05Writer {
 }
 ```
 
-
-
-
-
-# 第一章 缓冲流
-
-## 1.1 概述
-
-<!--P383-->
-
-![缓冲流](D:/Java/笔记/图片/1-10【缓冲流、转换流、序列化流、打印流】/1.png)
+# 第二章 IO缓冲高效流
 
 缓冲流，也叫够高效流是对4个基本的FileXxx流的增强，所以也是4个流，按照数据类型分类：
 
@@ -642,118 +314,37 @@ public class Demo05Writer {
 
 缓冲流的基本原理，是在创建流对象的时候，会创建一个内置的默认大小的缓冲区数组，通过缓冲区读写，减少系统IO次数，从而提高读写的效率。
 
-## 1.2 字节缓冲流
+![](D:\Java\笔记\图片\1-09【字节流、字符流】\1-1.png)
 
-### 构造方法
+## 2.1 字节缓冲流
 
 * `public BufferedInputStream(InputStream in)`：创建一个新的缓冲输入流。
 * `public BufferedOutputStream(OutputStream out)`：创建一个新的缓冲输出流。
 
-#### BufferedOutputStream
+### 2.1.1 BufferedInputStream
 
-<!--P384-->
+`BufferedInputStream`：字节缓冲输入流，该类继承了`InputStream`，也因此继承了父类的很多成员方法：
 
-`BufferedOutputStream`:字节缓冲输出流
+- `public void close()`：关闭此输入流并是方法与此流相关联的任何系统资源。
+- `public abstract int read()`：从输入流读取数据的下一个字节。
+- `public int read(byte[] b)`：从输入流中读取一些字节数，并把它们存储到字节数组b中。
 
-`java.io.BufferedOutputStream` extends `OutputStream`
+常用构造方法如下：
 
-**继承父类的成员方法：**
+* `BufferedInputStream(InputStream in)`：创建一个`BufferedInputStream`并保存其参数，即输入流in，以便将来使用。
 
-- `public void close()` :关闭此输出流并释放与此流相关联的任何系统资源。
-- `public void flush()` :刷新此输出流并强制任何缓冲的输出字节被写出。
-- `public void write(byte[] b)` :将b.length字节从指定的字节数组写入此输出流。
-- `public void write(byte[] b, int off, int len)` :从指定的字节数组写入len字节，从偏移量off开始输出到此输出流。
-- `public abstract void write(int b)` :将指定的字节输出流。
+* `BufferedInputStream(InputStream in, int size)`：创建具有指定缓冲区大小的`BufferedInputStream`并保存其参数，即输入流。
 
-**构造方法：**
-
-* `BufferedOutputStream(OutputStream out)` :创建一个新的缓冲输出流，将数据写入指定的底层输出流。
-
-* `BufferedOutputStream(OutputStream out, int size)` :创建一个新的缓冲输出流，将具有指定缓冲区大小的数据写入指定的底层输出流。
-
-  `OutputStream out`：字节输出流
-
-  我们可以传递`FileOutputStream`，缓冲流会给`FIleOutputStream`增加一个缓冲区，提高`FileOutputStream`的写入效率
-
-**使用步骤：**
-
-1. 创建`FileOutputStream`对象，构造方法中绑定要输出的目的地。
-2. 创建`BufferedOutputStream`对象，构造方法中传递`FileOutputStream`对象对象，提高`FileOutputStream`对象效率。
-3. 使用`BufferedOutputStream`对象中的方法`write`，把数据写入到内部缓冲区中。
-4. 使用`BufferedOutputStream`对象中的方法`flush`，把内部缓冲区的数据，刷新到文件中。
-5. 释放资源（释放资源的时候，会先调用`flush`犯法刷新数据，所以第四步可以省略）。
+  `InputStream out`：字节输入流。由于该流是一个抽象类，所以我们可以传递`FileInputStream`，缓冲流会给`FileInputStream`增加一个缓冲区，提高`FileInputStream`的读取效率
 
 ```java
-import java.io.BufferedOutputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-
-public class Demo01BufferedOutputStream {
-    public static void main(String[] args) throws IOException {
-        // 创建FileOutputStream对象，构造方法中绑定要输出的目的地。
-        FileOutputStream fos = new FileOutputStream("10_IO\\a.txt");
-        // 创建BufferedOutputStream对象，构造方法中传递FileOutputStream对象对象，提高FileOutputStream对象效率。
-        BufferedOutputStream bos = new BufferedOutputStream(fos);
-        // 使用BufferedOutputStream对象中的方法write，把数据写入到内部缓冲区中。
-        byte[] bytes = "林炫你好".getBytes();
-        bos.write(bytes);
-        // bos.write("林炫你好呀！".getBytes());
-        // 使用BufferedOutputStream对象中的方法flush，把内部缓冲区的数据，刷新到文件中。
-        bos.flush();
-        // 释放资源,关闭缓冲流
-        bos.close();
-    }
-}
-```
-
-#### BufferedInputStream
-
-<!--P385-->
-
-`BufferedInputStream`：字节缓冲输入流
-
-`java.io.BufferedInputStream` extends `InputStream`
-
-**继承父类的成员方法：**
-
-- `public void close()` :关闭此输入流并是方法与此流相关联的任何系统资源。
-- `public abstract int read()` :从输入流读取数据的下一个字节。
-- `public int read(byte[] b)` :从输入流中读取一些字节数，并把它们存储到字节数组b中。
-
-**构造方法：**
-
-* `BufferedInputStream(InputStream in)` :创建一个`BufferedInputStream`并保存其参数，即输入流in，以便将来使用。
-
-* `BufferedInputStream(InputStream in, int size)` :创建具有指定缓冲区大小的`BufferedInputStream`并保存其参数，即输入流。
-
-  `InputStream out`：字节输入流
-
-  我们可以传递`FileInputStream`，缓冲流会给`FileInputStream`增加一个缓冲区，提高`FileInputStream`的读取效率
-
-**使用步骤：**
-
-1. 创建`FileInputStream`对象，构造方法中绑定要读取的数据源。
-2. 创建`BufferedInputStream`对象，构造方法中传递`FileInputStream`对象，提高`FileInputStream`对象的读取效率。
-3. 使用`BufferedInputStream`对象中的方法`read`，读取文件。
-4. 释放资源。
-
-```java
-import java.io.BufferedInputStream;
-import java.io.FileInputStream;
-import java.io.IOException;
-
 public class Demo02BufferedInputStream {
     public static void main(String[] args) throws IOException {
         // 创建FileInputStream对象，构造方法中绑定要读取的数据源。
-        FileInputStream fis = new FileInputStream("10_IO\\a.txt");
-        // 创建BufferedInputStream对象，构造方法中传递FileInputStream对象，提高FileInputStream对象的读取效率。
+        FileInputStream fis = new FileInputStream("D:\\a.txt");
+        // 创建BufferedInputStream对象 构造方法中传递FileInputStream对象
         BufferedInputStream bis = new BufferedInputStream(fis);
 
-        // 使用BufferedInputStream对象中的方法read，读取文件。
-/*        int len = 0;
-        while((len = bis.read()) != -1) {
-            System.out.println((char)len);
-        }*/
         byte[] bytes = new byte[1024];
         int len = 0;
         while((len = bis.read(bytes)) != -1) {
@@ -766,113 +357,125 @@ public class Demo02BufferedInputStream {
 }
 ```
 
-### 效率测试
+### 2.1.1 BufferedOutputStream
 
-<!--P386 1.05-->
+`BufferedOutputStream`:字节缓冲输出流，该类继承了 `OutputStream`，也继承了父类的很多成员方法：
 
-使用文件复制来测试
+- `public void close()`：关闭此输出流并释放与此流相关联的任何系统资源。
+- `public void flush()`：刷新此输出流并强制任何缓冲的输出字节被写出。
+- `public void write(byte[] b)`：将b.length字节从指定的字节数组写入此输出流。
+- `public void write(byte[] b, int off, int len)`：从指定的字节数组写入len字节，从偏移量off开始输出到此输出流。
+- `public abstract void write(int b)`：将指定的字节输出流。
 
-步骤：
+常用构造方法如下：
 
-1. 创建字节缓冲输入流对象，构造方法中传递字节输入流
-2. 创建字节缓冲输出流对象，构造方法中传递字节输出流
-3. 使用字节缓冲输入流对象中的`read`，读取文件
-4. 使用字节缓冲输出流中的方法`write`，把读取的数据写入到内部缓冲区中
-5. 释放资源(会先把缓冲区的数据，刷新到文件中)
+* `BufferedOutputStream(OutputStream out)`：创建一个新的缓冲输出流，将数据写入指定的底层输出流。
+
+* `BufferedOutputStream(OutputStream out, int size)`：创建一个新的缓冲输出流，将具有指定缓冲区大小的数据写入指定的底层输出流。
+
+  `OutputStream out`：字节输出流。由于OutputStream是一个抽象类，所以我们可以传递`FileOutputStream`，缓冲流会给`FIleOutputStream`增加一个缓冲区，提高`FileOutputStream`的写入效率。
 
 ```java
-public class Demo02CopyFile {
+public class Demo01BufferedOutputStream {
     public static void main(String[] args) throws IOException {
-        long s = System.currentTimeMillis();
-
-        // 1.创建字节缓冲输入流对象，构造方法中传递字节输入流
-        BufferedInputStream bis = new BufferedInputStream(new FileInputStream("D:\\图片\\动漫\\清纯诱惑\\18.jpg"));
-        // 2.创建字节缓冲输出流对象，构造方法中传递字节输出流
-        BufferedOutputStream bos = new BufferedOutputStream(new FileOutputStream("D:\\Java\\18.jpg"));
-        // 3.使用字节缓冲输入流对象中的read，读取文件
-/*        int len = 0;
-        while((len = bis.read()) != -1) {
-            // 4.使用字节缓冲输出流中的方法write，把读取的数据写入到内部缓冲区中
-            bos.write(len);
-        }*/
-        //使用数组，更快
-        byte[] bytes = new byte[1024];
-        int len = 0;
-        while((len = bis.read(bytes)) != -1) {
-            bos.write(bytes, 0, len);
-        }
-
-        // 5.释放资源(会先把缓冲区的数据，刷新到文件中)
+        // 创建FileOutputStream对象，构造方法中绑定要输出的目的地。
+        FileOutputStream fos = new FileOutputStream("D:\\a.txt");
+        // 创建BufferedOutputStream对象，构造方法中传递FileOutputStream对象对象
+        BufferedOutputStream bos = new BufferedOutputStream(fos);
+        // 使用BufferedOutputStream对象中的方法write，把数据写入到内部缓冲区中。
+        byte[] bytes = "林炫你好".getBytes();
+        bos.write(bytes);
+        // 使用BufferedOutputStream对象中的方法flush，把内部缓冲区的数据，刷新到文件中。
+        bos.flush();
+        // 释放资源,关闭缓冲流
         bos.close();
-        bis.close();
-
-        long e = System.currentTimeMillis();
-        System.out.println("耗时：" + (e - s) + "毫秒");
     }
 }
 ```
 
-## 1.3 字符缓冲流
+## 2.2 字符缓冲流
 
-### 构造方法
+* `public BufferedWriter(Writer out)`：创建一个新的缓冲输出流。
 
-* `public BufferedWriter(Writer out)` :创建一个新的缓冲输出流。
-
-* `public BufferedReader(Reader in)` :创建一个新的缓冲输入流。
+* `public BufferedReader(Reader in)`：创建一个新的缓冲输入流。
 
 构造举例，代码如下：
 
 ```java
 // 创建字符缓冲输入流
-BufferedReader br = new BufferedReader(new FileReader("br.txt"));
+BufferedReader br = new BufferedReader(new FileReader("D:\\br.txt"));
 // 创建字符缓冲输出流
-BufferedWriter bw = new BufferedWriter(new FileWriter("bw.txt"));
+BufferedWriter bw = new BufferedWriter(new FileWriter("D:\\bw.txt"));
 ```
 
-#### BufferedWriter
+### 2.2.1 BufferedReader
 
-<!--P387-->
+`BufferedReader`: 字符缓冲输入流，该类继承了`Reader`，也覆盖重写了很多的方法：
 
-`BufferedWriter`: 字符缓冲输出流
+- `public void close()`：关闭此流并释放与此流相关联的任何系统资源。
+- `public int read()`：从输入流中读取一个字符。
+- `public int read(char[] cbuf)`：从输入流中读取一些字符，并将他们存储到字符数组cbuf中。
 
-`java.io.BufferedWriter` extends `Writer`
+常用构造方法：
 
-**继承父类的成员方法：**
+* `BufferedReader(Reader in)` ：创建一个使用默认大小输入缓冲区的缓冲字符输入流。
+* `BufferedReader(Reader in,  int sz)`：创建一个使用指定大小输入缓冲区的缓冲字符输入流。
 
-- `void Write(int c)` :写入单个字符。
-- `void Write(char[] cbuf)` :写入字符数组。
-- `abstract void Write(char[] cbuf, int off, int len)` :写入字符数组的某一部分，off数组的开始所以，len写的字符个数。
-- `void Write(String str)` :写入字符串。
-- `void Write(String str, int off, int len)` :写入字符串的某一部分，off字符串的开始索引，len写的字符个数。
-- `void flush()` :刷新该流的缓冲。
-- `void close()` :关闭此流，但是要先刷新它。
+特有方法：
 
-**构造方法：**
+* BufferedReader: `public String readLine()`：读一行文字。返回值：包含该行内容的字符串，不包含任何终止符号，如果已经到达流末尾，则返回null。
 
-*  `BufferedWriter(Writer out)` : 创建一个使用默认大小输出缓冲区的缓冲字符输出流。
-*  `BufferedWriter(Writer out,  int sz)` : 创建一个使用给定大小输出缓冲区的新缓冲字符输出流。
-
-**特有方法：**
-
-* BufferedWriter: `public void newLine()` :写一行分隔符，由系统属性定义符号。
-
-**使用步骤：**
-
-1. 创建字符缓冲输出流对象，构造方法中传递字符输出流。
-2. 调用字符缓冲输出流中的方法`write`，把数据写入到内存缓冲区中。
-3. 调用字符缓冲输出流中的方法`flush`，把内存缓冲区中的数据，刷新到文件中。
-4. 释放资源。
 
 ```java
-import java.io.BufferedWriter;
-import java.io.FileWriter;
-import java.io.IOException;
+public class Demo04BufferedReader {
+    public static void main(String[] args) throws IOException {
+        long s = System.currentTimeMillis();
 
+        // 创建字符缓冲对象，构造方法中传递字符输入流。
+        BufferedReader br = new BufferedReader(new FileReader("D:\\b.txt"));
+
+        // 使用字符缓冲输入流对象中的方法read/readLine读取文本。
+        String line;
+        while((line = br.readLine()) != null) {
+            System.out.println(line);
+        }
+
+        // 释放资源。
+        br.close();
+
+        long e = System.currentTimeMillis();
+        System.out.println("耗时为：" + (e - s) + "毫秒");
+    }
+}
+```
+
+### 2.2.2 BufferedWriter
+
+`BufferedWriter`: 字符缓冲输出流，该类继承自`Writer`类，也覆盖重写了许多方法：
+
+- `void Write(int c)`：写入单个字符。
+- `void Write(char[] cbuf)`：写入字符数组。
+- `abstract void Write(char[] cbuf, int off, int len)`：写入字符数组的某一部分，off数组的开始所以，len写的字符个数。
+- `void Write(String str)`：写入字符串。
+- `void Write(String str, int off, int len)`：写入字符串的某一部分，off字符串的开始索引，len写的字符个数。
+- `void flush()`：刷新该流的缓冲。
+- `void close()`：关闭此流，但是要先刷新它。
+
+常用构造方法：
+
+*  `BufferedWriter(Writer out)`： 创建一个使用默认大小输出缓冲区的缓冲字符输出流。
+*  `BufferedWriter(Writer out,  int sz)`： 创建一个使用给定大小输出缓冲区的新缓冲字符输出流。
+
+特有方法：
+
+* BufferedWriter: `public void newLine()`：写一行分隔符，由系统属性定义符号。
+
+```java
 public class Demo03BufferedWriter {
     public static void main(String[] args) throws IOException {
         long s = System.currentTimeMillis();
         // 创建字符缓冲输出流对象，构造方法中传递字符输出流。
-        BufferedWriter bw = new BufferedWriter(new FileWriter("10_IO\\b.txt"));
+        BufferedWriter bw = new BufferedWriter(new FileWriter("D:\\b.txt"));
         // 调用字符缓冲输出流中的方法write，把数据写入到内存缓冲区中。
         for (int i = 0; i < 5; i++) {
             bw.write("林炫你好");
@@ -890,77 +493,7 @@ public class Demo03BufferedWriter {
 }
 ```
 
-#### BufferedReader
-
-<!--P388-->
-
-`BufferedReader`: 字符缓冲输入流
-
-`java.io.BufferedReader ` extends `Reader`
-
-**继承父类的成员方法：**
-
-- `public void close()` :关闭此流并释放与此流相关联的任何系统资源。
-- `public int read()` :从输入流中读取一个字符。
-- `public int read(char[] cbuf)` :从输入流中读取一些字符，并将他们存储到字符数组cbuf中。
-
-**构造方法：**
-
-* `BufferedReader(Reader in)` ：创建一个使用默认大小输入缓冲区的缓冲字符输入流。
-* `BufferedReader(Reader in,  int sz)`：创建一个使用指定大小输入缓冲区的缓冲字符输入流。
-
-**特有方法：**
-
-* BufferedReader: `public String readLine()` :读一行文字。
-
-  返回值：包含该行内容的字符串，不包含任何终止符号，如果已经到达流末尾，则返回null。
-
-**使用步骤：**
-
-1. 创建字符缓冲对象，构造方法中传递字符输入流。
-2. 使用字符缓冲输入流对象中的方法read/readLine读取文本。
-3. 释放资源。
-
-```java
-import java.io.BufferedReader;
-import java.io.FileReader;
-import java.io.IOException;
-
-public class Demo04BufferedReader {
-    public static void main(String[] args) throws IOException {
-        long s = System.currentTimeMillis();
-
-        // 创建字符缓冲对象，构造方法中传递字符输入流。
-        BufferedReader br = new BufferedReader(new FileReader("10_IO\\b.txt"));
-
-        // 使用字符缓冲输入流对象中的方法read/readLine读取文本。
-/*        String line = br.readLine();
-        System.out.println(line); // 林炫你好1
-
-        line = br.readLine();
-        System.out.println(line); // 林炫你好2
-
-        line = br.readLine();
-        System.out.println(line); // null*/
-
-        // 上述代码重复，所以可以使用循环
-        String line;
-        while((line = br.readLine()) != null) {
-            System.out.println(line);
-        }
-
-        // 释放资源。
-        br.close();
-
-        long e = System.currentTimeMillis();
-        System.out.println("耗时为：" + (e - s) + "毫秒");
-    }
-}
-```
-
-## 1.4 练习：文本排序
-
-<!--P389-->
+## 2.3 练习-文本排序
 
 将以下段落进行排序
 
@@ -976,25 +509,7 @@ public class Demo04BufferedReader {
 6.臣本布衣，躬耕于南阳，苟全性命于乱世，不求闻达于诸侯。先帝不以臣卑鄙，猥自枉屈，三顾臣于草庐之中，咨臣以当世之事，由是感激，遂许先帝以驱驰。后值倾覆，受任于败军之际，奉命于危难之间，尔来二十有一年矣。
 ```
 
-### 案例分析
-
-1. 创建一个HashMap集合对象，key存储每行文本的序号（1， 2， 3）；value存储每行的文本。
-2. 创建字符缓冲输入流对象，构造方法中绑定字符输入流。
-3. 创建字符缓冲输出流对象，构造方法中绑定字符输出流。
-4. 使用字符缓冲输入流中的方法readLine，逐行读取文本。
-5. 对读取到的文本进行切割，获取行中的序号和文本内容。
-6. 把切割好的序号和文本的内容存储到HashMap集合中（key序号是有序的，会自动排序）。
-7. 遍历HashMap集合，获取每一个键值对。
-8. 把每一个键值对，拼接为一个文本行
-9. 把拼接好的文本，使用字符缓冲输出流中的方法write，写入到文件中。
-10. 释放资源。
-
-### 案例实现
-
 ```java
-import java.io.*;
-import java.util.HashMap;
-
 public class Demo05Test {
     public static void main(String[] args) throws IOException {
         // 1. 创建一个HashMap集合对象，key存储每行文本的序号（1， 2， 3）；value存储每行的文本。
@@ -1013,7 +528,7 @@ public class Demo05Test {
         }
 
         // 7. 遍历HashMap集合，获取每一个键值对。
-        for (String key : map.keySet()) {
+        for (String key： map.keySet()) {
             String value = map.get(key);
             // 8. 把每一个键值对，拼接为一个文本行
             line = key + "." + value;
@@ -1042,7 +557,7 @@ public class Demo05Test {
 
 解码：字节（看不懂的）-- 字符（能看懂的）
 
-* 字符编码Character Encoding :就是一套自然语言的字符与二进制数之间的对应规则。
+* 字符编码Character Encoding：就是一套自然语言的字符与二进制数之间的对应规则。
 * 编码表：生活中文字和计算机中二进制的对应规则。
 
 ### 字符集
@@ -1095,13 +610,13 @@ public class Demo01FileReader {
 
 **继承父类的共性成员方法：**
 
-- `void Write(int c)` :写入单个字符。
-- `void Write(char[] cbuf)` :写入字符数组。
-- `abstract void Write(char[] cbuf, int off, int len)` :写入字符数组的某一部分，off数组的开始所以，len写的字符个数。
-- `void Write(String str)` :写入字符串。
-- `void Write(String str, int off, int len)` :写入字符串的某一部分，off字符串的开始索引，len写的字符个数。
-- `void flush()` :刷新该流的缓冲。
-- `void close()` :关闭此流，但是要先刷新它。
+- `void Write(int c)`：写入单个字符。
+- `void Write(char[] cbuf)`：写入字符数组。
+- `abstract void Write(char[] cbuf, int off, int len)`：写入字符数组的某一部分，off数组的开始所以，len写的字符个数。
+- `void Write(String str)`：写入字符串。
+- `void Write(String str, int off, int len)`：写入字符串的某一部分，off字符串的开始索引，len写的字符个数。
+- `void flush()`：刷新该流的缓冲。
+- `void close()`：关闭此流，但是要先刷新它。
 
 **构造方法：**
 
@@ -1155,9 +670,9 @@ public class Demo02OutputStreamWriter {
 
 **继承父类的共性成员方法：**
 
-- `public void close()` :关闭此流并释放与此流相关联的任何系统资源。
-- `public int read()` :从输入流中读取一个字符。
-- `public int read(char[] cbuf)` :从输入流中读取一些字符，并将他们存储到字符数组cbuf中。
+- `public void close()`：关闭此流并释放与此流相关联的任何系统资源。
+- `public int read()`：从输入流中读取一个字符。
+- `public int read(char[] cbuf)`：从输入流中读取一些字符，并将他们存储到字符数组cbuf中。
 
 **构造方法：**
 
@@ -1442,7 +957,7 @@ public class Demo03Test {
         // 7. 把Object类型的集合转换为ArrayList类型。
         ArrayList<Person> list2 = (ArrayList<Person>) o;
         // 8. 遍历ArrayList集合。
-        for (Person person : list2) {
+        for (Person person： list2) {
             System.out.println(person);
         }
         // 9. 释放资源。
@@ -1482,11 +997,11 @@ PrintStream ps = new PrintStream("ps.txt");
 
 **继承父类的成员方法：**
 
-- `public void close()` :关闭此输出流并释放与此流相关联的任何系统资源。
-- `public void flush()` :刷新此输出流并强制任何缓冲的输出字节被写出。
-- `public void write(byte[] b)` :将b.length字节从指定的字节数组写入此输出流。
-- `public void write(byte[] b, int off, int len)` :从指定的字节数组写入len字节，从偏移量off开始输出到此输出流。
-- `public abstract void write(int b)` :将指定的字节输出流。
+- `public void close()`：关闭此输出流并释放与此流相关联的任何系统资源。
+- `public void flush()`：刷新此输出流并强制任何缓冲的输出字节被写出。
+- `public void write(byte[] b)`：将b.length字节从指定的字节数组写入此输出流。
+- `public void write(byte[] b, int off, int len)`：从指定的字节数组写入len字节，从偏移量off开始输出到此输出流。
+- `public abstract void write(int b)`：将指定的字节输出流。
 
 ```java
 import java.io.FileNotFoundException;
