--- a/1第一阶段/1-14【反射、注解】.md
+++ b/1第一阶段/1-14【反射、注解】.md
@@ -1,4 +1,4 @@
-# 第二章 反射
+# 第一章 反射
 
 反射：框架设计的灵魂。框架：半成品软件，可以在框架的基础上面进行软件的开发，简化代码
 
@@ -82,7 +82,7 @@ public class Demo01 {
 
 而如果想要创建其他的对象或者使用该对象的其他方法，只需要修改配置文件即可。源代码我们不用进行更改。
 
-## 2.1 反射介绍
+## 1.1 反射介绍
 
 反射机制允许程序在执行期间借助于ReflectionAPI取得任何类的内部信息（比如成员变量，构造器，成员方法等等），并且能够操作对象的属性及方法。反射在设计模式和框架底层都会用到。
 
@@ -141,104 +141,51 @@ public class Demo01 {
 }
 ```
 
-## 2.2 反射调用优化
+## 1.2 获取Class对象
 
-反射的优点：可以动态的创建和使用对象（也是框架底层的核心），使用灵活。如果么有反射机制，那么框架技术就会失去底层支撑。
+一共有三种方式，这三种方式获取的Class对象都一样。同一个字节码文件(*.class)在一个程序运行过程中，只会被加载一次，不论通过哪一种方式获取的Class对象都是同一个。
 
-反射的缺点：使用反射基本是解释执行，对执行速度有影响。
-
-## 2.3 获取Class对象的方式
-
-1. Class.forName("全类名")：将字节码文件加载进内存中，返回Class对象。
-   * 多用于配置文件，将类名定义在配置文件中。读取文件，加载类
-2. 类名.class：通过类名的属性class获取。
-   * 多用于参数的传递
-3. 对象.getClass()：getClass()方法在Object类中定义着。
-   * 多用于对象的获取字节码的方式
-
-同一个字节码文件(*.class)在一个程序运行过程中，只会被加载一次，不论通过哪一种方式获取的Class对象都是同一个。
-
-**代码：**
-
-首先创建一个完整的Person类
+1. `Class.forName("全类名")`：将字节码文件加载进内存中，返回Class对象。多用于配置文件，将类名定义在配置文件中。读取文件，加载类
+2. `类名.class`：通过类名的属性class获取。多用于参数的传递
+3. `对象.getClass()`：getClass()方法在Object类中定义着。多用于对象的获取字节码的方式
 
 ```java
-public class Person {
-    private String name;
-    private int age;
+public class Demo02 {
+    public static void main(String[] args) throws Exception {
+        // 第一种方式 将字节码文件加载进内存中，返回Class对象
+        Class<?> clazz1 = Class.forName("com.linxuan.demo01.Student");
+        System.out.println(clazz1); // class com.linxuan.demo01.Student
 
-    public Person() {
-    }
+        // 第二种方式 通过类名的属性class获取
+        Class<?> clazz2 = Student.class;
+        System.out.println(clazz2); // class com.linxuan.demo01.Student
 
-    public Person(String name, int age) {
-        this.name = name;
-        this.age = age;
-    }
+        // 第三种 通过对象.getClass来获取
+        Class<? extends Student> clazz3 = new Student().getClass();
+        System.out.println(clazz3); // class com.linxuan.demo01.Student
 
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public int getAge() {
-        return age;
-    }
-
-    public void setAge(int age) {
-        this.age = age;
-    }
-
-    @Override
-    public String toString() {
-        return "Person{" +
-                "name='" + name + '\'' +
-                ", age=" + age +
-                '}';
+        // ==会比较他们的地址 判断是否相同
+        System.out.println(clazz1 == clazz2); // true
+        System.out.println(clazz2 == clazz3); // true
     }
 }
 ```
 
-再创建主方法
+## 1.3 Class类
 
-```java
-import cn.com.domain.Person;
+![](D:\Java\笔记\图片\1-14【Junit单元测试、反射、注解】\3Class类结构图.png)
 
-public class Demo01Reflect {
-    public static void main(String[] args) throws ClassNotFoundException {
-        // 1. Class.forName("全类名")：将字节码文件加载进内存中，返回Class对象。
-        Class cls1 = Class.forName("cn.com.domain.Person");
-        System.out.println(cls1);
+## 1.3 Class对象的方法
 
-        // 2. 类名.class：通过类名的属性class获取。
-        Class cls2 = Person.class;
-        System.out.println(cls2);
+### 1.3.1 获取成员变量
 
-        // 3. 对象.getClass()：getClass()方法在Object类中定义着。
-        Person p = new Person();
-        Class cls3 = p.getClass();
-        System.out.println(cls3);
-
-        //  通过== 比较三个对象  ==会比较他们的地址
-        System.out.println(cls1 == cls2);// true
-        System.out.println(cls1 == cls3);// true
-    }
-}
-```
-
-## 2.4 获取Class对象的功能
-
-### 获取成员变量们
+FIled：成员变量
 
 * `Field[] getFields()`：获取所有public修饰符修饰的成员变量。
 * `Field getField(String name)`：获取指定名称的public修饰的成员变量。
 
 * `Field[] getDeclaredFields()`：获取所有的成员变量，不用考虑修饰符。
 * `Field getDeclaredField(String name)`：获取指定的成员变量，不用考虑修饰符。
-
-FIled：成员变量
 
 获取之后可以对其进行的操作：
 
@@ -247,9 +194,6 @@ FIled：成员变量
 3. 忽略访问权限修饰符的安全检查 `setAccessible(true)`：暴力反射**（对于private可以采取暴力忽略，后续获取也都可以使用）**
 
 ```java
-import cn.com.domain.Person;
-import java.lang.reflect.Field;
-
 public class Demo02Reflect {
     public static void main(String[] args) throws Exception {
         // 获取class对象 类名.class：通过类名的属性class获取。
@@ -273,8 +217,6 @@ public class Demo02Reflect {
         a.set(p, "林炫");
         System.out.println(p);
 
-
-
         // Field[] getDeclaredFields()：获取所有的成员变量，不用考虑修饰符。
         Field[] declaredFields = cls.getDeclaredFields();
         for (Field declaredField : declaredFields) {
@@ -289,7 +231,7 @@ public class Demo02Reflect {
     }
 }
 ```
-### 获取构造方法们
+### 1.3.2 获取构造方法
 
 * `Constructor<?>[] getConstructors()`：获取所有public修饰的构造方法
 * `Constructor<T> getConstructor(Class<?>... parameterTypes)`：通过参数获取指定构造方法
@@ -333,7 +275,7 @@ public class Demo03Reflect {
 }
 ```
 
-### 获取成员方法们
+### 1.3.3 获取成员方法
 
 * `Method[] getMethods()`：获取所有的public修饰符修饰的方法
 
@@ -405,7 +347,7 @@ public class Demo04Reflect {
 }
 ```
 
-### 获取类名
+### 1.3.4 获取类名
 
 * `String getName()`：获取类名
 
@@ -423,15 +365,88 @@ public class Demo05Reflect {
 }
 ```
 
-## 2.5 “框架”案例
 
-### 需求
+
+## 1.4 反射调用优化
+
+反射的优点：可以动态的创建和使用对象（也是框架底层的核心），使用灵活。如果么有反射机制，那么框架技术就会失去底层支撑。
+
+反射的缺点：使用反射基本是解释执行，对执行速度有影响。
+
+可以来实验一下：
+
+```java
+public class Demo01 {
+    public static void main(String[] args) throws Exception {
+        method1();
+        method2();
+    }
+
+    public static void method1() {
+        // 使用传统方法创建对象，调用方法
+        Student student = new Student();
+        long start = System.currentTimeMillis();
+        for (int i = 0; i < 9_0000_0000; i++) {
+            student.out();
+        }
+        long end = System.currentTimeMillis();
+        System.out.println("使用传统方法时间为：" + (end - start) + "毫秒！");
+    }
+
+    public static void method2() throws Exception {
+        // 使用反射方法创建对象 调用方法
+        Class<?> clazz = Class.forName("com.linxuan.demo01.Student");
+        Object studentInstance = clazz.newInstance();
+        Method outMethod = clazz.getMethod("out");
+
+        long start = System.currentTimeMillis();
+        for (int i = 0; i < 9_0000_0000; i++) {
+            outMethod.invoke(studentInstance);
+        }
+        long end = System.currentTimeMillis();
+        System.out.println("使用反射方法时间为：" + (end - start) + "毫秒！");
+    }
+}
+
+// 使用传统方法时间为：4毫秒！
+// 使用反射方法时间为：1316毫秒！
+```
+
+而如果想要优化的话，可以取消安全检查。
+
+Method、Field和Constructor对象都有着setAccessible()方法，该方法的作用是启动和禁用访问安全检查的开关。参数值为true表示反射的对象在使用的时候取消访问检查，提高反射效率。
+
+```java
+public class Demo01 {
+    public static void main(String[] args) throws Exception {
+        method3();
+    }
+
+    public static void method3() throws Exception {
+        // 使用反射方法创建对象 调用方法 优化后
+        Class<?> clazz = Class.forName("com.linxuan.demo01.Student");
+        Object studentInstance = clazz.newInstance();
+        Method outMethod = clazz.getMethod("out");
+
+        // 优化一下 关闭访问检查
+        outMethod.setAccessible(true);
+
+        long start = System.currentTimeMillis();
+        for (int i = 0; i < 9_0000_0000; i++) {
+            outMethod.invoke(studentInstance);
+        }
+        long end = System.currentTimeMillis();
+        System.out.println("使用反射优化方法时间为：" + (end - start) + "毫秒！");
+    }
+}
+// 使用反射优化方法时间为：765毫秒！
+```
+
+
+
+## 1.5 框架案例
 
 写一个“框架”， 在不改变该类的任何代码的前提下，改动配置文件，帮助我们创建任意类的对象，并且执行其中任意的方法
-
-### 实现
-
-**步骤**
 
 1. 将需要创建的对象的全类名和需要执行的方法定义在配置文件当中
 2. 在程序中加载读取配置文件
@@ -439,14 +454,7 @@ public class Demo05Reflect {
 4. 创建对象
 5. 执行
 
-**代码**
-
 ```java
-import java.io.InputStream;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Method;
-import java.util.Properties;
-
 public class Demo06ReflectTest {
     public static void main(String[] args) throws Exception {
 
