--- a/2第二阶段/2-17【软件设计架构、会话技术】.md
+++ b/2第二阶段/2-17【软件设计架构、会话技术】.md
@@ -1,3 +1,60 @@
+# 第二章 MVC开发模式
+
+## 2.1 JSP演变历史
+
+<!--P768-->
+
+1. 早期只有servlet，只能使用response输出标签数据，非常麻烦。
+2. 后来有了jsp，简化了Servlet的开发，如果过度使用jsp，在jsp中即写大量的java代码，又写html标签，造成难于维护，难于分工协作。
+3. 再后来，java的web开发，借鉴mvc开发模式，使得程序的设计更加合理性。
+
+## 2.2 MVC详解
+
+<!--P769-->
+
+![](D:\Java\笔记\图片\2-16【软件设计架构】\1MVC开发模式.bmp)
+
+**M**：Model，模型。JavaBean
+
+* 完成具体的业务操作，如：查询数据库，封装对象
+
+**V**：View，视图。JSP
+
+* 展示数据
+
+**C**：Controller，控制器。Servlet
+
+* 获取用户的输入
+* 调用模型
+* 将数据交给视图进行展示
+
+## 2.3 MVC优缺点
+
+* 优点：
+  1. 耦合性低，方便维护，可以利于分工协作
+  1. 重用性高
+
+* 缺点：
+  1. 使得项目架构变得复杂，对开发人员要求高
+
+# 第五章 三层架构：软件设计架构
+
+<!--P781-->
+
+1. 界面层(表示层)：用户看的得界面。用户可以通过界面上的组件和服务器进行交互
+2. 业务逻辑层：处理业务逻辑的。
+3. 数据访问层：操作数据存储文件。
+
+![](D:\Java\笔记\图片\2-16【软件设计架构】\2三层架构.bmp)
+
+
+
+
+
+
+
+
+
 <!--P737-->
 
 # 第一章 会话技术
